*Empty MediaWiki Message*

--- a/«Гайги_Вайгель»_морамо_кужо.mw
+++ b/«Гайги_Вайгель»_морамо_кужо.mw
@@ -22,14 +22,25 @@
 }}
 '''«Гайги Вайгель»''' ({{Lang-ru|«Звонкий голос»}}) — эрзянь авань раськень морамо кужо, [[Од Пурня (Кочкурбуе)|Од Пурнясто]]. 
 
-Пек парсте содасызь морост аволь ансяк [[Мордовия]]со, томбалеяк - [[Чувашонь Республикась|Чувашиясо]], [[Самарань ёнкс]]о, [[Ине-Петрань ош|Петербургсояк]]. 
+Кочкурбуень Од Пурня велесэ ули «Гайги вайгель» морамо кужо, сонтемензэ Мордовиясо а юты вейкеяк покшчи. Коллективесь морси кода эсензэ буесэ, истя жо республикань покш сцена лангсо, ардтни лия регионовгак. Те ансамблясонть эрьва кодамо профессиянь ломанть, иесткак, видьстэ меремс, аволь аламо. Ансяк весень сынст вейсэнди вейкесь – эрзянь моронтень певтеме вечкемась. «Гайги вайгелесь» – Мордовия Республикань Государственной премиянь лауреат, раськеютконь, весероссиянь, республикань, буень эрьва кодамо пелькстамонь ды фестивалень лауреат ды дипломант.
 
-Морыцятнень пурныцянзо ды прявтост Бояркина Мария Дмитриевна<ref>[http://www.finnougoria.ru/community/creative/section.php?ELEMENT_ID=29081 «Гайги Вайгель» («Звонкий голос»), фольклорный народный ансамбль {{Ref-ru}}]]</ref>(2009 иестэ казязь ({{Lang-ru|Почетной грамотой Республики Мордовия}}). 
-[[2008 ие]]стэ морамо кужонтень максозь  ({{Lang-ru|«Лауреат Государственной премии Республики Мордовия»}}) лем.
+Те коллективесь пурназель [[1953 ие]]стэ. Васенце составонть эйстэ тосо морсить ансяк кавто ломанть. Сынь ледстнить, кода [[1970 ие]]стэ ардтнесть [[Москов]]ов «Мелодия» звукозаписывающей студияв, косо грампластинкас сёрмадозельть сынст морост. Ансамблясонть моронь ушодыцякс ульнесь  Прасковья Кузьминична Крамойкина. Коллективсэнть а ёвтавишка путовксост Дарья Леонтьевна Антошкинань, Фёкла Ефимовна Мокейкинань. Сынсь стасть [[эрзянь оршамопель]]ть, кочкасть репертуар, ледстнесть-вельмевтсть стувтозь седикелень койтнень. Весе юткошкаст алтасть вечкевикс тевентень. Ансамблясь курок теевсь райононь визитной карточкакс.
 
-«Гайги вайгель»-ень аватне морыть кезэрень эрзянь морот, ды ламо вийть путыть раськеть койтнень ды озкснэнь туртов. Ванстызь ды невтить ломантненень [[эрзянь полань саема]] коенть, Покров покшчинть, Роштувань морот. Аватне якить эрзянь оршамосо, сустыть сынст.
+70-це иетнестэ ансамблянь ветицякс ульнесь Р.С.Зорькина. Сон парсте содасынзе [[эрзянь моро]]тнень, койтнень-кирдатнень. Мельспаросо морсесь аватнень марто велень эрицятнень икеле. (Ней Раиса Сергеевна морси «Ламзурь» ансамблясо). [[1983 ие]]стэ саезь Од Пурнянь авань коллективенть кармась ветямо Мария Дмитриевна Бояркина<ref>[http://www.finnougoria.ru/community/creative/section.php?ELEMENT_ID=29081 «Гайги Вайгель» («Звонкий голос»), фольклорный народный ансамбль {{Ref-ru}}]]</ref>(2009 иестэ казязь ({{Lang-ru|Почетной грамотой Республики Мордовия}}). Самай сестэ кочказель ансамблянть туртов виев лемеськак – «Гайги вайгель». Сон кармась эрсеме республикань культурань весе мероприятиятнесэ. Ды аволь стяко шкань ютазь ансамблянть туртов максозель раськень коллективень покш лемесь.
 
-[[2014 ие]]стэ максозь кудонтень раськень лем  — ({{Lang-ru|«Заслуженный коллектив народного творчества»<ref>[http://givc.ru/projects/passportculturalregions/5979/item15870/ Народное творчество и досуговая деятельность{{Ref-ru}}]]</ref>}}) (кемекстазь Россиянь Минкультурась  [[ацамковонь 16 чи]]стэ 2014 иестэ).
+Пек парсте содасызь морост аволь ансяк [[Мордовия]]со, томбалеяк - [[Чувашонь Республикась|Чувашиясо]], [[Самарань ёнкс]]о, [[Ине-Петрань ош|Петербургсояк]].  «Гайги вайгеленть» репертуарсо эрзянь кезэрень морот, рузонь раськень морот, частушкат, содавикс сказительницанть Серафима Люлякинань моронзо. Морыцятнень валост коряс, кезэрень моротнень сынь тонавтнесть бабаст-сырькаест пельде. Раськень моротне ютасть вейкеде-вейкес. Сынст свал морсесть весе кенярксчитнесэ, косо весе велесь пурнавиль вейс.
+Ансамблясь вельмевтизе [[Эрзянь полань саема|«Эрзянь свадьба»]] коенть. Тосо улить башка морот, конатнень морсильть ансяк урьвакстомсто, кодат валт эряви ёвтамс, кона шкане авардемс, лисемс киштеме ды седе тов. Ламо вийть путыть раськеть койтнень ды озкснэнь ютавтома туртов. Ванстызь ды невтить ломантненень Покров покшчинть, Роштувань моротнень. Коллективень аватне кедьчелькевть. Сынь аволь ансяк эстест стасть костюмт, истя жо райононь лия ансамблятнень туртовгак.
+
+2007 иестэ «Гайги вайгель» ансамблясь тердезель Санкт-Петербургов «Рождество Христово» Россиянь православной фольклорной фестивалентень. Тосо минек морыцятне невтизь «Эрзянь свадьбанть», Роштовань калядамотнень. Теде мейле ульнесть Казанень «Крутушка» Раськеютконь фестивальсэ.  [[2008 ие]]стэ морамо кужонтень максозь  ({{Lang-ru|«Лауреат Государственной премии Республики Мордовия»}}) лем.
+
+Башка валт эряви ёвтамс, кода аватне вастневсть минек ды омбо масторонь покш ломантнень марто. [[2007 ие]]стэ [[Саранск]]ойсэ ютась «Шумбрат, Финно-Угрия!» суоминь-угрань раськень Масторлангонь I фестивалесь. Те кенярксчинтень сакшность РФ-нь Президентэсь [[Путин, Владимир Владимирович|В.В.Путин]], [[Суоми Мастор|Финляндия]]нь Президентэсь Т.Халонен ды [[Мадьяронь Мастор|Венгриянь] Премьер-министрась Ф.Дьюрчань. Омбоцеде минек аватне В.В.Путинэнь вастызь [[2012 ие]]стэ, зярдо келейстэ тешкставсть эрзянь ды мокшонь раськенть Россиянь государствань лия раськетнень марто вейсэндявомань [[тёжа]] иетне. Россиянь Президентэсь кадсь коллективенть туртов автограф. Неть вастовоматнестэ кадовсть ламо фотокувт.
+
+Теде мейле «Гайги вайгелесь» Оперань ды балетэнь театрасо вастсь [[Франция Мастор|Франциянь]] содавикс киноактёронть [[Жерар Депардье]]нь. Эрзянь аватне тусть васолдонь инженть мельс. А кода эно?! Вайгелест оно кодат виевть, паляст лангсто сельметькак а саевить. Сынсь чаразь чарыть Жераронь перька, казсть тензэ [[эрзянь панар]] ды эрзя-мокшонь пачпорт.
+
+2012 иестэ Од Пурня велев сакшность Московонь инжеть. «МИР» телеканалось «Гайги вайгель» ансамблядонть снимась документальной фильма. Эрьва морыцянть аволь шожда эрямодо ёвтнесть башка, якасть тенст кудос, невтизь, кода эрить. Истя жо невтизь репетицияст, конат ютыть велень клубсо. Вейке-вейкенень лездазь, бабинетне састыне кузить сцена лангс ды ушодыть моро. Сынст валост коряс, зярдо морыть – стувтовить весе мелявкстнэ, апаротне ды орматне. Малав весе эрить ськамост, мирдетне кулость, эйкакштне сралесть масторонь келес. Печтямс ризксэв ськамочинть лездыть моротне, концерттнэ. Фильмась лиссь пек мельстуиця! Сон ули Интернетсэяк, косо ванызь 14 тёжадо ламо ломанть!
+
+[[2013 ие]]стэ якасть [[Чебоксары ош]]ов  «Весе минь – Россия» Весероссиянь народной творчествань фестивалев. Тосо сынь лиссть I степенень лауреатокс.
+[[2014 ие]]стэ максозь морамокужонтень раськень лем  — ({{Lang-ru|«Заслуженный коллектив народного творчества»<ref>[http://givc.ru/projects/passportculturalregions/5979/item15870/ Народное творчество и досуговая деятельность{{Ref-ru}}]]</ref>}}) (кемекстазь Россиянь Минкультурась  [[ацамковонь 16 чи]]стэ 2014 иестэ).
 
 == «Гайги Вайгель»-с совицянзо ==
 [[Артовкс:Seka baba Ozkso.JPG|thumb|right|300px|Кромойкина Прасковья Кузьминична ды Бояркина Мария Дмитриевна оймсить Раськень Озксо]]
@@ -37,11 +48,16 @@
 * Адмайкина Евдокия Герасимовна
 * Адмайкина Мария Никитишна
 * Адмайкина Нина Фёдоровна
+* Бояркина Мария Дмитриевна 
+* Ведяйкина Мария Петровна 
 * Кромойкина Прасковья Кузьминична
 * [[Мокейкина, Фекла  Ефимовна|Мокейкина Фекла  Ефимовна]]
+* Потанина Валентина Фёдоровна 
 * Лазуткина Вера Николаевна
 * Устинова Раиса Алексеевна
 * Фролкина Просковья Николаевна
+
+2003 иестэ саезь ансамблянь аккомпаниаторокс кармась Иван Ильич Фролкин, вейке морсицянть мирдезэ.
 
 ==Морост ==
 Кой-кона морост:«Маштыть, авакай» ({{Lang-ru|«Сумела, матушка»}}), «Ох, авакай, чиямак» ({{Lang-ru|«Ох, матушка, засватай меня»}}), «Дованть колмо церанзо» ({{Lang-ru|«У вдовы трое сыновей»}}), Вирьга юты Машура ({{Lang-ru|«По лесу проходит Машура»}}), «Бути саемс, Ваня леляй, саемак» ({{Lang-ru|«Если женишься на мне, дядя Ваня, то женись»}}), «Пиже садсо» ({{Lang-ru|«Во зеленом саду»}}), «Вирь чиресэ эрзянь цёрась» ({{Lang-ru|«На опушке леса эрзянский парень»}}). 
