/* «Гайги Вайгель»-с совицянзо */

--- a/«Гайги_Вайгель»_морамо_кужо.mw
+++ b/«Гайги_Вайгель»_морамо_кужо.mw
@@ -43,7 +43,7 @@
 [[2014 ие]]стэ максозь морамокужонтень раськень лем  — ({{Lang-ru|«Заслуженный коллектив народного творчества»<ref>[http://givc.ru/projects/passportculturalregions/5979/item15870/ Народное творчество и досуговая деятельность{{Ref-ru}}]]</ref>}}) (кемекстазь Россиянь Минкультурась  [[ацамковонь 16 чи]]стэ 2014 иестэ).
 
 == «Гайги Вайгель»-с совицянзо ==
-[[Артовкс:Seka baba Ozkso.JPG|thumb|right|300px|Кромойкина Прасковья Кузьминична ды Бояркина Мария Дмитриевна оймсить Раськень Озксо]]
+[[Артовкс:Seka baba Ozkso.JPG|thumb|right|300px|Кромойкина Прасковья Кузьминична ды Бояркина Мария Дмитриевна оймсить [[Раськень Озкс]]о]]
 * Агеева Роза Степановна
 * Адмайкина Евдокия Герасимовна
 * Адмайкина Мария Никитишна
