*Empty MediaWiki Message*

--- a/Тавла_лей.mw
+++ b/Тавла_лей.mw
@@ -25,7 +25,7 @@
 {{Лия смустьтне|Тавла (смустьтне)}}
 '''Тавла лей''' ({{lang-ru|Тавла}}) — леесь [[Россия]]со, чуди [[Мордовия]]нь [[Кочкурбуе]]нь ды [[Саран ош]]онь пурнавкссо.
  
-Пры [[Инесаро лей]]c [[Саран ош]]со. Кувалмозо 33 [[вайгельпе|вп]], покшолмазо 375 вп². 13 вп лейпрясто саезь сонензэ пры [[Атемарка лей]].
+Пры [[Инесаро лей]]c [[Саран ош]]со. Кувалмозо 33 [[вайгельпе|вп]], покшолмазо 375 вп². 13 вп лейпрясто саезь сонензэ пры [[Атямарька лей]].
 
 {{stub}}
 
