*Empty MediaWiki Message*

--- a/Атямарь_(смустьтне).mw
+++ b/Атямарь_(смустьтне).mw
@@ -4,7 +4,8 @@
 * [[Атямарькс]]  — чувто.
 ;Топонимт
 * [[Атемарь (Лямбирьбуе)|Атемарь]]  — веле [[Лямбирьбуе]]сэ, [[Мордовия]]со.
-
+;Гидроним
+* [[Атямарька лей|Атямарька]]  — лей [[Мордовия]]со.
 
 __DISAMBIG__
 
