*Empty MediaWiki Message*

--- a/Дудникова_(Теньгушбуе).mw
+++ b/Дудникова_(Теньгушбуе).mw
@@ -59,16 +59,11 @@
  |язык сайта              = 
 }}
 
-'''Дудникова''' ({{Lang-ru|п. Дудниково}}) — эрзянь веле [[Мордовия]]со [[Теньгушбуе]]сэ.
-
+'''Дудникова''' ({{Lang-ru|д. Дудниково}}) — эрзянь веле [[Мордовия]]со [[Теньгушбуе]]сэ.
 
 == Веленть лемденть  ==
 
-
 ==Содавикс ломанть те велестэнть==
-
-
-
 
 == Сёрм.: ==
 <references />
