*Empty MediaWiki Message*

--- a/Кортамо:Сухая_Атьма_лей.mw
+++ b/Кортамо:Сухая_Атьма_лей.mw
@@ -1,1 +1,2 @@
 [[User:Erzianj jurnalist]], paräk erävi jutavtomo Сухая/Большая? Vanstovt pečkazonj dy kirgyzonj wiki - synj jutavtstj kelezest --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 18:51, 14 Аштемковонь 2016 (UTC)
+* [[User:Kaftaj]], паряк эряви миненьгак истя теемс, аздан видстэ?! Эряволь кевкстямс [[User:Rueter]]  тень коряс! Вейке тевесь, кода ули лемесь/валось, конань ланга ломать мерить эрзякс истя, омбоце тевесь, кода ютавтыть рузонь валтнень эрзякс, ды а кортыть истя. Тувталось ансяк истя тень маряви.--[[Теиця:Erzianj jurnalist|Erzianj jurnalist]] ([[Теицянь кортамось:Erzianj jurnalist|обсуждение]]) 21:13, 15 Аштемковонь 2016 (UTC)
