*Empty MediaWiki Message*

--- a/Сыктывкар_ош.mw
+++ b/Сыктывкар_ош.mw
@@ -39,8 +39,8 @@
  |высота центра ЭТ        = 172
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 243 536
+  |год переписи           = 2016
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
