*Empty MediaWiki Message*

--- a/Сыктывкар_ош.mw
+++ b/Сыктывкар_ош.mw
@@ -18,8 +18,8 @@
  |размер карты страны     = 
  |размер карты региона    = 
  |размер карты района     = 
- |вид региона             = 
- |регион                  = Коми Республикась{{!}}коми
+ |вид региона             = республика
+ |регион                  = Коми Республикась{{!}}Коми
  |регион в таблице        = 
  |вид района              = 
  |район                   = 
