*Empty MediaWiki Message*

--- a/Сыктывкар_ош.mw
+++ b/Сыктывкар_ош.mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = ош
  |Эрзянь лем              = Сыктывкар
- |оригинальное название   = {{lang-kv|Сыктывкар}}
+ |оригинальное название   = {{lang-kv|Сыктывдін}}
  |изображение             = Syk_titul.jpg
  |подчинение              = 
  |мастор                  = Россия
@@ -58,4 +58,9 @@
  |сайт                    = http://Сыктывкар.рф/
  |язык сайта              = 
 }}
-'''Сыктывкар''' — [[Коми Республикась|Коми Республикань]] прявтошось.
+'''Сыктывкар''' ({{lang-kv|Сыктывдін}}) — [[Коми Республикась|Коми Республикань]] прявтошось.
+
+== Сёрм.: ==
+<references />
+
+[[Категория:Россия Масторонть ошт]]
