--- a/Араповонь_Саша.mw
+++ b/Араповонь_Саша.mw
@@ -26,7 +26,7 @@
 
 Чачсь [[1959 ие]]нь [[сундерьковонь 1 чи]]стэ [[Мордовия Республикась|Мордовиянь]] [[Тумобуе]]нь [[Кенде (Тумобуень)|Кенде веле]]сэ тонавтыцянь семиясо.
 
-[[1964]] иестэ малавиксензэ марто тусть эрямо [[Кобале (Тумобуе)|Кобале велев]] — аванзо тиринь велентень. Тесэ Сашань ютась вишка поразо. 1977 иестэ прядызе Кобалень школанть, 1983 иестэ — М.В. Ломоносов лемсэ МГУ-нь журналистикань факультетэнть. 1985 иестэ саезь важоди «Сятко» журналонь редакциясо. Россиянь сёрмадей куронь ломань. Мордкизэсь нолдынзе валморонь колмо киниганзо: «Вайгель» (1990), «Вальма» (1992), «Взмах» (2001). Валморонзо совасть вейсэнь пусмос, конат лиссть Саран ошсо, Самар, Ине-Питер, Москов, Хельсинки, Будапешт, Таллинн оштнэсэ. «Литературная Россия» кулялопань лауреат (2000), Мордовиянь заслуженной поэт. Эйзюрковонь 2000 иестэ Араповонь Саша - [[Сятко (журнал-ковставкс)|Сятко журналонть]] прявт редактор. Ютко шкане седиль гитарасо, ладсиль морот эсензэ стихензэ лангс.
+[[1964]] иестэ малавиксензэ марто тусть эрямо [[Кобале (Тумобуе)|Кобале велев]]<ref name="Журнал «Странник»"/> — аванзо тиринь велентень. Тесэ Сашань ютась вишка поразо. 1977 иестэ прядызе Кобалень школанть, 1983 иестэ — М.В. Ломоносов лемсэ МГУ-нь журналистикань факультетэнть. 1985 иестэ саезь важоди «Сятко» журналонь редакциясо. Россиянь сёрмадей куронь ломань<ref name="Журнал «Странник»">[http://www.strannik-lit.ru/467_14015_10_2_2012.html Журнал «Странник» Тамара Баргова: Стихи приоткрывают дверь...]{{ref-ru}}</ref>. Мордкизэсь нолдынзе валморонь колмо киниганзо: «Вайгель» (1990), «Вальма» (1992), «Взмах» (2001). Валморонзо совасть вейсэнь пусмос, конат лиссть Саран ошсо, Самар, Ине-Питер, Москов, Хельсинки, Будапешт, Таллинн оштнэсэ. «Литературная Россия» кулялопань лауреат (2000), Мордовиянь заслуженной поэт. Эйзюрковонь 2000 иестэ Араповонь Саша - [[Сятко (журнал-ковставкс)|Сятко журналонть]] прявт редактор<ref name="БЕЗФОРМАТА.RU">[http://saransk.bezformata.ru/listnews/mordovii-izdana-elektronnaya-kniga/1265012/ БЕЗФОРМАТА.RU: В память о поэте Александре Арапове в Мордовии издана электронная книга]{{ref-ru}}</ref>. Ютко шкане седиль гитарасо, ладсиль морот эсензэ стихензэ лангс.
 
 Арапов Саша кулось 2011-це иень аштемаковонь кемнилееце чистэ. Калмамотне ютасть аштемковонь 16-це чистэ Саранскойсэ.
 
@@ -34,14 +34,149 @@
 * «Вайгель» (1990)
 * «Вальма» (1992)
 * «Мейле» (2006)
-
-== Кона пусмотнес совавтозь ==
 * «Эрзянь валске» (2011)
+
+==А. В. Араповонь произведениянзо художественной литературасо башка изданият==
+; эрзянь кельсэ :
+# Вайгель: стихть.- Саранск: Мордовской книжной издательствась, 1990.- 80с.
+# Вальма: стихть.- Саранск: Мордовской книжной издательствась, 1992.- 64с.
+# Мейле: стихть.- Саранск: Мордовской книжной издательствась, 2006.- 264 с.
+ 
+===Периодической изданиясо ды коллективной сборниксэ публикациятне===
+; эрзянь кельсэ
+ 
+# Сырнесэ моданть пой кази…: Эрзянь кель; Чачома веле…; Иляст сода война зярдояк; Каргт ливтить;  Ильтямо [и др.]: стихть // Маней васолкст: стихотвореният.-Саранск, 1987.- С.73-87.
+# Ангелэнь чи; Микитыч: мизолкст // Сятко.-1995.-№2.- С.136-139.
+# Инже: ёвтнема // Сятко.-1996.- №1/2.- С.90-91.
+# Экзаменсэ;  Недлячистэ; Миллионерт; Содавикс ломань; Панго мельга: ёвтнемат // Сятко.-1996.- № 5/6.- С.44-54.
+# Атят-бабат; Кавто букват; Васенцеде ЗАГС-с; Пангт - а содавикс лангт: ёвтнемат // Сятко. - 1997. - №1/2.- С.125-130.
+# Каштан Сега: ёвтнема // Сятко.-1997.- №11.- С.131-134.
+# Лутазь «теште»: ёвтнема // Сятко.-1997.- №12.- С. 131-134.
+# «Тонавтомак, тетяй, чатьмонеме…»: «Зярдо ськамот…»; Сёксень виренть чатьмонемась валдо…»; Мезе кадынь мон тезэнь, а содан…; Мон эзинь эря, он мон неинь…; Кандтнинь кемема потсом салавине [и др.]: [стихть] // Сятко.- 2004.- № 4.- С. 24-31.
+# «Шожда, теке валнэ, ашо пельне уи»…: Чевте таркинесэ…; Седейде моро; Кельме теште; Мазый теште…; Пегакснить галат! Пегакснить галат!... [и др.]: стихть // Cятко.- 2005.- № 7/8.- С. 122-140.
+# «Эрзянь ойметнень ёнов седей чиртян…»: Валтнэ ёзавсть ды човсевсть…; Аштят веле песэ, теке нецяй…; Кода понгсь менеленть черькстни…; Верень потиця…; Монь сэтьме вайгелем…[и др.]: стихть // Сятко.- 2007.- № 10.- С. 22-27.
+# «Ды муят вийть те эрямонть вечкемс…»: «Налдамизь!» - вешсть…; «Зярдо келемтян кедеть…»; Чеки, крёстни конянзо…; Ломанть вастат…; Киртят сэреть… [и др.]: стихть // Сятко.- 2008.- № 9.- С. 60-69.
+# «Седяк, гитарам! Вейсэтяно минь! …»: стихть // Сятко.-2008.- № 2.- С. 42-49.
+# «Афганистансто азрдыть цёратне…»: Велявтоми; «Кепедевсь взводось минек…»; «Авазо, цёрат вастт!…»: [стихть] // Сятко.- 2011.- № 2.- № 2.- С. 58-60.
+# «Кандтнинь  кемема потсон салавине…»: «Одксчись певтеме марявсь…»; «Пиже зорят минь стякшнынек…»; «Нусманя сёксень морось, валдо…»; «Менелесь стака, потмура, прок кольсь…!»; «Кодамо тарьксэв сёксень чись!…» [и др.]: стихть // Сятко.- 2012.- № 11.- С. 19-23.
+ 
+===башка нолдавкст===
+;рузонь кельсэ :
+#Взмах: стихи.- Саранск: Мордов. кн. изд-во, 2001.- 112 с.
+#Жест: стихи.- Саранск: Книга, 2010.- 256 с.
+#Избранные произведения. Очерки. Воспоминания о поэте [электронный ресурс]  / рук. проекта А. М. Доронин; ред.- сост. А. Громыхин, Н. Ишуткин.- Электрон. текстовые дан.- [б. м.: б.и.], 2012.- эл. опт. диск.
+ 
+===Периодической изданиясо ды коллективной сборниксэ публикацииятне===
+;рузонь кельсэ : 
+#А у нас такая вот забота; Я помню - если перейти на шаг; Друзья, как сочен день: стихи // Горизонт: лит.- худож. сб. / сост.: А. А. Долгачев, Н. М. Мирская.- Саранск, 1987.- С. 63-64.
+#Вторые сутки над страной...; Проводы; На Родине; Дождь / пер. Р. Романова: стихи // Середина земли родной: сб. стихотворений молодых поэтов / сост. М. Акчурин. - М., 1987. - С. 256-260.
+#Звезда на небе задрожала;Буду жить и добро наживать; Роль; Бег; Паренье [ и др.] // Гостеприимная земля: стихотворения: сборник.- Саранск, 1988.- С. 6-24.
+#...Я в гости приду к дяде Васе вечерней порою; Как птица от боли...; Тяжко было - богу не молился; «И мальчик из детства приснится ей искренний»: стихи // Откровение: лит.- худож. сб. / сост.: В. С. Ионова, Н. М. Мирская.- Саранск, 1988.- С. 197-199.
+#Не вернулся Анисим с войны; Год 1937-й; ...Приказывали: расстреливали «врагов народа»; В Мордовии зимы - русские; «Избу крепкую срубили» [и др.]: стихи // Калейдоскоп: стихи и поэмы: сборник / ред.- сост. К. Смородин.- Саранск, 1989.- С. 105-108.
+#Проснется - целовать; Обездоленность, несчастность; Мама вновь до рассвета встает: стихи // Созвездие: лит.- худож. сб. / сост. В. С. Ионова.- Саранск, 1990.- С. 117-118.
+#Господи, все нам зачтется; Я не знаю еще, как живу; И в тридцать в облаках витать; И щека прикоснется к щеке; И поставит пуля точку: стихи // Восхождение: лит.- худож. сб. / сост.: В. С. Ионова, Н. М. Мирская.- Саранск, 1993.- С. 83-86.
+#Птица: стихи // Странник.-1996.- №1.- С. 129-131.
+#Не вернулся Иван; Игры судьбы; Образ сберегу; Мое счастье; Человеческая осень: стихи / пер. с мордов.- эрзя  И. Деордиева  // От Урала до Невы: сборник.- Челябинск, 2001.- С.460 - 461.
+#«Летит судьба уже без страха…»: стихи // Странник.- 2004.- № 2.- С.236- 241.
+#Сокол в клетке: стихотворения // Корни: лит.- худож. альм. / ред.- сост. В. А. Федосеев.- Саранск, 2007.- С. 36-41.
+#Я пою как живу…: [стихи] // Странник.- 2011.- № 6.- С. 83-91.
+ 
+===Публицистикась===
+#«Эрьмезень» сёрмадыцянтень сюконямо // Сятко.-1994.- №10/11.- С.11.
+#«Оймем ваксс сельведне петни…»: Евгений Иванович Агеевень чачома чистэнзе 80 иетненень // Сятко.-2002.- № 1.- С. 94-102.
+#Ниле портретт: зарисовкат // Сятко.- 2007.- №9.- С.108-137.- Содержаниясонть: «Оймем ваксс сельведне петни…»: [Е. Агеев поэтнть эйстэ]; Стувтозь вайгель: [М. И. Грызунов писателенть эйстэ]; Кодамо танстезе менеленть?…: [П. Ф. Горбунов художникенть эйстэ]; Тешкс- тешкскине-таташкине…: [Россиянь художникень сонзонь членэть Н. И. Мастинэнь эйстэ].
+#«Симан домка лисьмапрясто…»: очерк: А. С. Кизяевде // Сятко.- 2007.- № 8.- С. 112-124.
+#«Оймем ваксс сельведне петни…»: Евгений Иванович Агеевень чачома чистэнзе 90 иетненень // Сятко.-2012.- № 1.- С. 71-76.
+ 
+===Эрямодо ды шкинемадо литературась===
+====Башка важодевкст. Башка кевкстемат эрямодо ды шкинемадо====
+#Петрухин, В. Океаны взметнувшихся чувств // Сов. Мордовия.-1990.-25 янв.
+#Баргова, Т. Келей ки теть, поэт! // Эрзянь правда.-1991.- 6 апр.
+#Горбунов, Г. И.  Арсемат неень поэзиядо // Горбунов, Г. И. Вастомат: литературно-критической статьят. - Саранск, 1993.- С. 135-161. С. 152-153: о творчестве А. Арапова.
+#Александр Васильевич Арапов // Ваймонь лихтибрят: «Мокшеть» и «Якстерь тяштенять» книгасна.- Саранск, 1994.- С.15.
+#Зиновьев, Н. Тештень пиземе: (Вал од поэтнэде) // Зиновьев, Н. Валдо тештень пусмо: очеркть.- Саранск, 1996.- С. 178-182.
+#Теке жо // Эрзянь правда.-1997.-1 марта.
+#«Ава лайши баня кудыкеле» // Эрзянь правда.- 1997.- 20 февр.
+#Валтнэнь сувтни чова сувтемсэ: минек эрзянь цератне // Эрзянь правда. -1997.-15 февр.
+#Доронина, Т.  ... Валдо, теке эйкакшпингень он // Сятко.-1997.- №6.- С. 63-70.
+#Арапов Александр Васильевич // История Мордовии в лицах: биогр. сб. / отв. ред. П. Д. Грузнов. - Саранск, 1999.- Кн.3.- С. 15.- (Тр. / НИИЯЛИЭ при Правительстве РМ; Вып. 115. Сер. ист.).
+#Баргова, Т. С. Сюкпря ойметь, чарькодемат кисэ // Эрзянь правда.- 2000.- 26 окт.
+#Лауреаты еженедельника «Литературная Россия» за 2000 год: Александр Арапов - за плодотворные поиски в русско-эрзянской поэзии // Лит. Россия.- 2000.- 29 дек.
+#Щанкина, Р. «Ава лайши баня кудыкеле…»: [тееви анализ А. Араповонь стихотворениянзо] // Сятко.- 2000.- № 2.- С.77-79.
+#Арапов Александр Васильевич (1959) // Эрзямонь вайгель: эрзя-мокшонь литературань антология.- Саранск, 2001.- С. 72-73.
+#Моисеев, М. Поэтсь арась лауреатокс: [«Литературная Россия» газетань лауреатть А. Араповонь колга] // Мокшень правда.-2001.- 23 янв.
+#…Снег в России грустный-грустный…: [интервью с поэтом, лауреатом «Литературной России» за 2000-й год / записала Т. Кириченко]  // Изв. Мордовии.-2001.- 17 янв.
+#Каторова, А.  Поэзиясь [А. Араповонь, В. Федосеевонь, В. Юдинать,Ф. Костяйкинонь, Л. Дергачевать поэзияснон колга] // Мокша.- 2002.- № 2/3.- С. 117-125.
+#Дёмин, В. «Мон моран морот сорныця вайгельсэ…» // Сятко.- 2003.- № 4.- С. 92-120.
+#Зиновьев, Н. В. Арапов Александр Васильевич // Мордовия: энциклопедия: в 2 т.- Саранск, 2003.- Т. 1.- С. 125.
+#То же // Мордовиясь: энциклопедия: кафта томса.- Саранск, 2007.- 1-це томсь.- С. 104.
+#То же // Мордовиясь: энциклопедия: кавто томсо.- Саранск, 2007.- 1-це томось.- С. 104.
+#Зиновьев, Н. Поэзиянь валдо вальма…: очерк // Эрзянь правда.-2003.- 20 февр.
+#Каторова, А. М. Художественное своеобразие лирики Александра Арапова // Филологические иссследования. 2002: межвуз. сб. науч. тр. по актуал. проблемам литературоведения и языкознания / МГУ им. Н. П. Огарева; отв. ред. О. Е. Осовский.- Саранск, 2003.- С. 34-38.
+#Смородин, К. В Мордовии зимы - русские // Лит. Россия.- 2003.- 21 февр.(№7).- С. 6.
+#То же // Странник.-2011.- № 6.- С. 92-97.
+#Арапов Александр Васильевич (1959) // Писатели Мордовии: биогр. справ. / сост.: Е. М. Голубчик, Т. С. Баргова.- Саранск, 2004.- С. 29-30.
+#Жиндеева, Е. А. Традиции  Ф. И. Тютчева в творчестве современного мордовского поэта А. Арапова // Актуальные проблемы межкультурных и межязыковых контактов: материалы науч.- практ. конф., посвящ. 90-летию со дня рождения проф. Н. Т. Пенгитова (Йошкар - Ола) / МГПИ им. Н. К. Крупской;  сост. и отв. ред.  А. Н. Куклин. - Йошкар - Ола, 2004.- С.115-117.
+#Каторова, А. Коень поладома: Борис Пастернаконь «Гамлет» ды Александр Араповонь «Роль» стихотворениятнень малавиксчист ды явовомаст // Сятко.- 2004.- № 6.- С. 98-103.
+#Шугуров, Н. Стихензэ гайгить Россиянь поэттнэнь ютксо // Эрзянь правда.- 2004.- 1 апр.
+#Дёмин, В. И.  «Мон моран морот сорныця вайгельсэ…» // Дёмин, В. И. Сюконян тенк…: эрзянь писательде ёвтнемат.- Саранск, 2005.- С. 160-180.
+#Теке жо // Демин, В. Сёрмадан эйстэнк, тиринь ломанть вечкезь… .- Саранск, 2010.- С. 4-32.
+#Нам не простят наивной простоты: [беседа с поэтом / записал В. В. Огрызко] // Лит. Россия.- 2005.- 23 сент.(№ 38).- С.16.
+#Баргова, Т. Паро, ули истямо поэт… // Арапов, А. Мейле: стихть.- Саранск, 2006.- С. 5-6.
+#Теке жо // Сятко.- 2007.- № 4.- С. 117-118.
+#Доронин, А. Два поэта - два восприятия?: [об А. Арапове и В.Федосееве] / А. Доронин, Я. Лаутеншлегер // Отчий дом: лит.- худож. алм. / ред.- сост. В. А. Федосеев.- Саранск, 2006.- С. 224-235.
+#Каторова,  А. Ладси стихть поэтэсь...: А. Араповонь лирикадонть од вал // Сятко.- 2006.- № 6.- С. 104-109.
+#Каторова, А. М. Строфический репертуар лирики А. Арапова: некоторые наблюдения // Бочкаревские чтения : материалы XXX зон. конф. молодых литературоведов Поволжья (6-8 апр. 2006 г.).- Самара, 2006.- Т. 1.- С. 273-283.
+#Дёмкина, Э. Традиции Сергея Есенина в творчестве Александра Арапова // Корни: лит.- худож. альм.- Саранск, 2007.- С. 287-292.
+#Баргова, Т. С. Литература на разных языках и авторы // Баргова Т. С. Книжный мир Мордовии.- Саранск, 2008.- С. 152-169.С. 164-169: о творчестве  А. Арапова.
+#Дёмкина, Э. Коень поладома: С. Есенинэнь ды А. Араповонь лирикаст малавиксчись // Сятко.- 2008.- № 4.- С. 93-105.
+#Каторова, А. «Ашо» стихсэ мон сёрмадан…: эрзянь поэзиясо верлибрась // Сятко.- 2008.- № 7.- С. 92-95.
+#Каторова, А. Кавто поэтэнь кавто стихть: мезес тонавты ванкшномаст  / А. Каторова, М. Панькина // Сятко.- 2008.- № 2.- С. 91-95.
+====А. В. Араповонь 50 иень топодемантень:====
+#А. В. Араповонь юбилеентень // Нар. образование  Респ. Мордовия.- 2009.- № 5/6.- С. 214-215.
+#Бородачев, И. «Пенистые облака» Александра Арапова // Изв. Мордовии.- 2009.- 3 нояб.
+#Лемозт морайхть нармоттне // Мокша.- 2009.- № 11.- С. 91.
+#Маторкина, Т. Поэтэсь тешкстызеэсь юбилеензэ // Эрзянь правда.-2009.- 26 нояб.
+#Маторкина, Т. Эрзянь валдо теште // Эрзянь правда.- 2009.- 5 нояб.
+====***====
+#Зиновьев, Н. В. Арапов Александр Васильевич / Н. В. Зиновьев, В. И. Демин // Мордовия, XX век: культурная элита: энцикл. справ.: в 2 ч. /  НИИГН при Правительстве РМ.- Саранск, 2010.-  Ч.1.- С. 33.
+#Покш поэтэнть, ялганть ледстнемга // Сятко. – 2011.- № 11.- С. 34-50.- Содержаниясонть: Астувтовикс валрисьметь пезнасть седеезэнь… / Д. Таганов.- С. 35-37; «Моронзо мартонок саинек…» / О. Ерина, Джак Рютер.- С. 38; Седейризксэнь а онкстави сталмось… / Дригань Толай.- С. 39; Поэтэнть эряви ловномс / Т. Баргова.- С.40-47; «Тушендыхть поэттне акша коволокс»: стихть Александр Араповти Поэтти и Ломанти.- С.48; «Ашо пельне уи, сонсь а соды ков…»: вал Александр Араповдо / В. Лобанов.- С. 49-50.
+#Баргова, Т. Свал карми мартонок // Эрзянь правда.- 2011.- 22 дек.
+#Баргова, Т. Стихи приоткрывают дверь… // Странник.- 2011.- №6.- С. 98-103.
+#Лобанов, В. Акша ковол уи, аф содасы ков… // Мокша.- 2011.- № 8.- С. 80-81.
+#Палькина, Т. Н. Способы моделирования художественного времени в поэзии Александра Арапова // Философская лирика Мордовии конца XX - начала XXI века: монография.- Саранск, 2011.- С. 30-39.
+#Горина, Н.  Н. Моделирование урока сопряженного изучения поэзии С. Есенина и А. Арапова в старших классах / Н. Н. Горина, Т. В. Мардаева // Интеграция науки и культуры в образовательное пространство: молодежный взгляд: материалы регион. науч.- практ. конф. (г. Саранск, 20 дек. 2011 г.).- Саранск, 2012.- С. 74-77.
+#Демин, В. И. Ульнесь аволь ансяк поэтэкс …: А. В. Арапов - журналист / В. Демин, А. Чиндяскина // Сятко.- 2012.- № 1.- С. 79-89.
+#Каторова, А. М. Основные  направления развития мордовской литературы в начале XXI века // Вестн. НИИ гуманитар. наук при Правительстве  Респ. Мордовия.- 2013.- № 1.- С. 122-131. С. 123-126: о творчестве А. Арапова.
+#Степин, С. Н. Основные тенденции развития лирики в современной поэзии Мордовии: (жанровый аспект).- Саранск: [б. и.]. - 2013.- 172 c. С. 146-148: о творчестве А. Арапова. 
+#Александр Васильевич Арапов: [некролог] // Эрзянь правда.- 2011.- 16 июня.
+#Александр Васильевич Арапов // Сятко.- 2011.- № 7.- С. 144.
+#Пиняева, С. Памяти Александра Арапова // Изв. Мордовии.- 2011.- 1 нояб.
+====Башкапроизведениятнеде ды  сборниктнеде литературась====
+#Вальма: стихть (1992)
+#Зиновьев, Н. Валдо вальма // Эрзянь правда.-1992.- 9 июля.
+#«Окно» поэта // Сов. Мордовия.-1992.-30 июня.
+#Взмах: стихи (2001)
+#Щанкина, Р. «Оймесь анок сезневемс панксонь - панкс…» // Эрзянь правда.- 2002.- 29 янв.
+#Демин, В. Убедительный взмах // Мордовия – 7 дней.- 2002.- 16-22 янв.(№ 3).- С. 10.
+#Демин, В. И. Взмах поэтических крыльев  // Лит. Россия.- 2002.- 1 февр.- С. 6.
+#Преснякова, Л. «Нам ничего на свете не простится…» // Изв. Мордовии.- 2002.- 24 янв.
+#Смородин, К. «Со своею душою согласный…» // Мордовия.- 7 дней.- 2003.- 5-11 февр. (№ 6).- С. 13.
+#Мейле: стихть (2006)
+#Демин, В. «Верепаз! Макст монень вий…»: Александр Араповонь «Мейле» пусмодонзо тешкст // Сятко.- 2007.- № 6.- С. 91-101.
+#Жест: стихи (2010)
+#Демин, В. Тен - сонзэ канстось, сонсь кочкизе, сонсь…: Александр Араповонь стихень од пусмодонзо вал // Сятко.- 2011.- № 1.- С. 102-115.                               
+====Библиографиясь ====
+#Брыжинский, А. И. Арапов Александр Васильевич (1959) / А. И. Брыжинский, О. В. Пашутина, Е. И.Чернов // Брыжинский, А. И. Писатели Мордовии: библиогр. справ. / А. И. #Брыжинский, О. В. Пашутина, Е. И. Чернов.- Саранск, 2001.- С. 72-74
 
 == Невтькеть ==
 * [http://www.litrossia.ru/archive/165/person/4129.php «НАМ НЕ ПРОСТЯТ НАИВНОЙ ПРОСТОТЫ» (интервью с А. В. Араповым)] {{Ref-ru}}
 * Мейле: Стихть / Александр Арапов. - Саранск: Мордовской книжной издательствась, 2006. - 264 с. Мордов.-эрзя яз. ISBN 5-7595-1698-1
 * Эрзянь валске . - Киев: Эрзянь Вал нолдамо кудось, 2011. - 64 лл. Эрзя. (2Рос=эрз)6-5
+
+== Сёрм.: ==
+<references />
+
 {{stub}}
 
 [[Category:Эрзянь валморонь ладсийть|А]]
