*Empty MediaWiki Message*

--- a/Верце_Ладка_(Ицял_буе).mw
+++ b/Верце_Ладка_(Ицял_буе).mw
@@ -58,7 +58,8 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Верце Ладка''' ({{Lang-ru|д. Верхняя Ладка}})  —  велесь [[Ицял буе|Ицял буесэ]].
+{{Лия смустьтне|Ладка (смустьтне)}}
+'''Верце Ладка''' ({{Lang-ru|д. Верхняя Ладка}})  — рузонь велесь [[Ицял буе|Ицял буесэ]].
 
 == Сёрм.: ==
 <references />
