*Empty MediaWiki Message*

--- a/ЛопаПарцун:Раторонь_сёлт.mw
+++ b/ЛопаПарцун:Раторонь_сёлт.mw
@@ -3,7 +3,7 @@
 |state        = <includeonly>{{{state|collapsed}}}</includeonly>
 |цвет      = {{Цвет|Река}}
 |заглавие    = Ратор леень сёлтонь лейтне - лейбрясто прамос
-|содержание   = [[Акшенас лей]] {{!}} [[Аморда  лей|Аморда]] {{!}} [[Арзинка лей]] {{!}} [[Атямарька лей]] {{!}} [[Ашня лей|Ашня]] {{!}} [[Барахманка лей]] {{!}} [[Батмас лей]] {{!}} [[Безымянная  лей|Безымянная]] {{!}} [[Большая Атьма лей]] {{!}} [[Большая Турлейка]] {{!}} [[Бутырлейка]] {{!}} [[Вежня лей]] {{!}} [[Вейка лей]] {{!}} [[Вацярлей|Вечерлейка]] {{!}} [[Вышковка лей|Вышковка]] {{!}} [[Инелей (лей)|Инелей]] {{!}} [[Инесаро лей|Инесаро]] {{!}} [[Иресть лей]] {{!}} [[Ирса лей|Ирса]] {{!}} [[Ирсеть лей (Рудня леень верце сянглей)|Ирсеть]] {{!}} [[Ирсеть лей (Рудня леень алце сянглей)|Ирсеть]] {{!}} [[Иссера лей]] {{!}} [[Карнай лей|Карнай]] {{!}} [[Картлей|Картлей]] {{!}} [[Ковач лей|Ковач]] {{!}} [[Кондарша лей]] {{!}} [[Ладка]] {{!}} [[Левжа лей|Левжа]] {{!}} [[Лямбирка лей]] {{!}} [[Мадаевка  лей|Мадаевка]] {{!}} [[Мадаевка  лей|Мадаевка]] {{!}} [[Меньшовка лей|Меньшовка]] {{!}} [[Миролейка]] {{!}} [[Мокрая Чеварда лей]] {{!}} [[Мочалище лей|Мочалище]] {{!}} [[Муравей  лей|Муравей]] {{!}} [[Наченалка]] {{!}} [[Нушлейка]] {{!}} [[Нуя лей|Нуя]] {{!}} [[Пандус лей|Пандус]] {{!}} [[Панзелка лей]] {{!}} [[Пелька (лей)|Пелька]]  {{!}} [[Пелька (лисьмапря)|Пелька (лисьмапря)]]{{!}} [[Пензятка лей|Пензятка]] {{!}} [[Перпелейка]] {{!}} [[Песчанка лей|Песчанка]] {{!}} [[Печка лей|Печка]] {{!}} [[Пичиней (Вачарлеень сянглей)|Пичиней]] {{!}} [[Пишля лей]] {{!}} [[Ришлейка]] {{!}} [[Ростанка лей]] {{!}} [[Рудня лей|Рудня]] {{!}} [[Руднячка лей]] {{!}} [[Салминка лей]] {{!}} [[Селиевка лей]] {{!}} [[Стырша лей]] {{!}} [[Сухая Аморда лей]] {{!}} [[Сухая Атьма лей]] {{!}} [[Сухая Ирса лей]] {{!}} [[Сухая Чеварда лей]] {{!}} [[Сухой Алатырь лей]] {{!}} [[Сюкся лей]] {{!}} [[Тавла  лей|Тавла]] {{!}} [[Татар Велень Лей]] {{!}} [[Тюрка лей]] {{!}} [[Ужовка (Раторонь сянглей)|Ужовка]] {{!}} [[Уксун лей]] {{!}} [[Умочь лей]] {{!}} [[Урляй]] {{!}} [[Ускляй]] {{!}} [[Чанга лей|Чанга]] {{!}} [[Яз]] 
+|содержание   = [[Акшенас лей]] {{!}} [[Аморда  лей|Аморда]] {{!}} [[Арзинка лей]] {{!}} [[Атямарька лей]] {{!}} [[Ашня лей|Ашня]] {{!}} [[Барахманка лей]] {{!}} [[Батмас лей]] {{!}} [[Безымянная  лей|Безымянная]] {{!}} [[Большая Атьма лей]] {{!}} [[Большая Турлейка]] {{!}} [[Бутырлейка]] {{!}} [[Вежня лей]] {{!}} [[Вейка лей]] {{!}} [[Вацярлей|Вечерлейка]] {{!}} [[Вышковка лей|Вышковка]] {{!}} [[Инелей (лей)|Инелей]] {{!}} [[Инесаро лей|Инесаро]] {{!}} [[Иресть лей]] {{!}} [[Ирса лей|Ирса]] {{!}} [[Ирсеть лей (Рудня леень верце сянглей)|Ирсеть]] {{!}} [[Ирсеть лей (Рудня леень алце сянглей)|Ирсеть]] {{!}} [[Иссера лей]] {{!}} [[Карнай лей|Карнай]] {{!}} [[Картлей|Картлей]] {{!}} [[Ковач лей|Ковач]] {{!}} [[Кондарша лей]] {{!}} [[Ладка]] {{!}} [[Левжа лей|Левжа]] {{!}} [[Лямбирка лей]] {{!}} [[Мадаевка  лей|Мадаевка]] {{!}} [[Мадаевка  лей|Мадаевка]] {{!}} [[Меньшовка лей|Меньшовка]] {{!}} [[Миролейка]] {{!}} [[Мокрая Чеварда лей]] {{!}} [[Мочалище (Нуянь сянглей)|Мочалище]] {{!}} [[Муравей  лей|Муравей]] {{!}} [[Наченалка]] {{!}} [[Нушлейка]] {{!}} [[Нуя лей|Нуя]] {{!}} [[Пандус лей|Пандус]] {{!}} [[Панзелка лей]] {{!}} [[Пелька (лей)|Пелька]]  {{!}} [[Пелька (лисьмапря)|Пелька (лисьмапря)]]{{!}} [[Пензятка лей|Пензятка]] {{!}} [[Перпелейка]] {{!}} [[Песчанка лей|Песчанка]] {{!}} [[Печка лей|Печка]] {{!}} [[Пичиней (Вачарлеень сянглей)|Пичиней]] {{!}} [[Пишля лей]] {{!}} [[Ришлейка]] {{!}} [[Ростанка лей]] {{!}} [[Рудня лей|Рудня]] {{!}} [[Руднячка лей]] {{!}} [[Салминка лей]] {{!}} [[Селиевка лей]] {{!}} [[Стырша лей]] {{!}} [[Сухая Аморда лей]] {{!}} [[Сухая Атьма лей]] {{!}} [[Сухая Ирса лей]] {{!}} [[Сухая Чеварда лей]] {{!}} [[Сухой Алатырь лей]] {{!}} [[Сюкся лей]] {{!}} [[Тавла  лей|Тавла]] {{!}} [[Татар Велень Лей]] {{!}} [[Тюрка лей]] {{!}} [[Ужовка (Раторонь сянглей)|Ужовка]] {{!}} [[Уксун лей]] {{!}} [[Умочь лей]] {{!}} [[Урляй]] {{!}} [[Ускляй]] {{!}} [[Чанга лей|Чанга]] {{!}} [[Яз]] 
 }}<noinclude>
 
 </noinclude>
