*Empty MediaWiki Message*

--- a/Мочалище_(Нуянь_сянглей).mw
+++ b/Мочалище_(Нуянь_сянглей).mw
@@ -23,6 +23,7 @@
   |Ёнкст                  = Мордовия
    |Буе                   = Ицял буе
 }}
+{{Лия смустьтне|Мочалище (смустьтне)}}
 '''Мочалище''' — лей [[Россия]]со, кона чуди [[Мордовия]]ва, [[Ицял буе]]ва. [[Нуя лей|Нуя леенть]] кершёнонь сянглей<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
 
 Кувалмозо 13 [[Вайгельпе|вп]]. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177561|title=Государственный водный реестр РФ: Мочалище|archiveurl=http://www.webcitation.org/69C7VoxFh|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
