*Empty MediaWiki Message*

--- a/Мочалище_(смустьтне).mw
+++ b/Мочалище_(смустьтне).mw
@@ -7,7 +7,7 @@
 
 ;Гидроним
 * [[Мочалище (Нуянь сянглей)|Мочалище]]  — лей [[Мордовия]]со, [[Нуя лей|Нуя леень]] сянглей.
-* [[Мочалище (Атямарькань сянглей)|Мочалище]]  — лей [[Мордовия]]со, [[Атямарька лей|Атямарька леень]] сянглей.
+* [[Мочалище (Атямарькань сянглей)|Мочалище]]  — чудикерькс [[Мордовия]]со, [[Атямарька лей|Атямарька леень]] сянглей.
 * [[Мочалище (эрьке)|Мочалище]] — эрьке [[Гатчинань буе]]сэ [[Ленинградонь ёнкс]]о.
 
 __DISAMBIG__
