*Empty MediaWiki Message*

--- a/Мочалище_(смустьтне).mw
+++ b/Мочалище_(смустьтне).mw
@@ -5,7 +5,7 @@
 * [[Мочалище (Марий Эл|Мочалище]] — посёлка ошонь кондямо Звенигень буесэ [[Марий Эл]]сэ.
 * [[Мочалище (Тверень ёнкс)|Мочалище]] — веле [[Селижаронь буе|Селижаронь буесэ]] [[Тверень ёнкс]]о.
 
-;Гидроним
+;Гидронимт
 * [[Мочалище (Нуянь сянглей)|Мочалище]]  — лей [[Мордовия]]со, [[Нуя лей|Нуя леень]] сянглей.
 * [[Мочалище (Атямарькань сянглей)|Мочалище]]  — чудикерькс [[Мордовия]]со, [[Атямарька лей|Атямарька леень]] сянглей.
 * [[Мочалище (эрьке)|Мочалище]] — эрьке [[Гатчинань буе]]сэ [[Ленинградонь ёнкс]]о.
