*Empty MediaWiki Message*

--- a/Панзелка_лей.mw
+++ b/Панзелка_лей.mw
@@ -23,11 +23,12 @@
    |Буе                   = Починкань буе (Алоошонь ёнкс)
 }}
 
-'''Панзелка''' — лей Россиясо, чуди [[Алоошонь ёнкс|Алоошонь ёнкска]].  [[Ратор лей|Ратор леенть]] кершёнонь сянглей.
+'''Панзелка''' — лей Россиясо, чуди [[Алоошонь ёнкс|Алоошонь ёнкска]].  [[Ратор лей|Ратор леенть]] кершёнонь сянглей<ref name="Древности Пензенского края"/>.
 Леенть кувалмозо 20 [[Вайгельпе|вп]], покшолмазо весемезэ 60,1 тёж. вп². Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177512|title=Государственный водный реестр РФ: Панзелка|archiveurl=http://www.webcitation.org/69C7YOq62|archivedate=2012-07-16}}</ref> леенть пурнавкссо. 
 
 Лейбрянь тарказо ашти пелевеёно Волчиха велестэнть ды 10 вп [[Лугаян ош]]онть эйстэ. Леесь чуди лембе-чивалгома ёнов, чудемасонзо ашти апак эрямо таркава, вирьга. Ратор лейс пры Курилиха веленть вакссо ды 5 вп лембе-чилисема ёнов Степана Разина посёлкасто.
 == Леенть лемденть ==
+Лемесь саеви {{Lang-myv|паз}} - ({{Lang-ru|«божье»}}) +  {{Lang-myv|эрьке}} - ({{Lang-ru|«озеро»}})<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.145  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> 
 == Сёрм.: ==
 <references />
 
