--- a/Калевала.mw
+++ b/Калевала.mw
@@ -14,7 +14,7 @@
 == «Калевала»-cь ды лия малавикс морокерькстнэ ==
 Тедеде педе пес прядозь «Калевалантень» топоди 150 иеть. Неть иетнень перть сон ютавтозель 45 кельс. Киртязь ютавтовкст лововить малав 150. «Калеваланть» лангс ванозь ды сонзэ ёжонзо-виензэ марязь ламо лияяк раськень ломанть кармасть ловомо эйсэнзэ невтемакс раськеёжомарямонь кепедема шкатнестэ.
 
-Лангозонзо ванозь пурнызь эсь раськень эпосост: эстэсь Ф. Крейцвальд — эстононь «Калевипоэгенть», американь цёрась Г.Лонгфелло — «Моронть Гайаватонь кувалма». «Калеваланть» оймезэ певерьдсь видметь Латышень масторонть лангскак, косо латышесь А.Пумпур пурнась латышень эпос «Лачплесис». Эрзятнененьгак ней ули мейсэ каштангалемс — [[Шарононь Сандра|А. М. Шаронов]] пурнызе ды теизе минек раськенть эпосонзо — [[«Масторава» морокерькс|«Мастораванть»]].
+Лангозонзо ванозь пурнызь эсь раськень эпосост: эстэсь Ф. Крейцвальд — эстононь «Калевипоэгенть», американь цёрась Г.Лонгфелло — «Моронть Гайаватонь кувалма». «Калеваланть» оймезэ певерьдсь видметь Латышень масторонть лангскак, косо латышесь А.Пумпур пурнась латышень эпос «Лачплесис». Эрзятнененьгак ней ули мейсэ каштангалемс — [[Шарононь Сандра|А. М. Шаронов]] пурнызе ды теизе минек раськенть эпосонзо — [[«Масторава» морокерькс|«Мастораванть»]]. Улить эрзянь кельс<ref name="Н. А. Ракин">Ежегодник финно-угорских исследований. Том 10. Выпуск 2. – Ижевск: Издательский центр «Удмуртский университет», 2016. – 182 с. // Н. А. Ракин «КАЛЕВАЛА» НА КОМИ ЯЗЫКЕ ISSN 2311-0333{{ref-ru}} </ref> «Калеваланть» ютавксгак. 
 
 == Васенце морось ==
 ''Ушодома моро, стихтне 1-102. Менельавась валги иневедень толконпряс, косо пекии варманть ды веденть пельде ды тееви Ведьавакс, с.103-176. Яксярго теи пизэ Ведьаванть кумажанзо лангс ды канды алт, с.177-212. Алтнэ кеверить пизэстэнть ды тапсевить, пелькскетнестэ тееви модась, менелесь, чипаесь, ковось, пельтне, с.213-244. Ведьавась теи ведьулот, мода нерьть-чиреть, домка ды алка таркат иневедьсэнть, с.245-280. Вяйнямёйнен чачи Ведьаванть эйстэ. Сонзэ кувать кандтнить толконтнэ. Окойники сон лотки ды лиси ведьстэнть мода лангс, с.281-344.''
