--- a/Ало_Чукало_(Отяжбуе).mw
+++ b/Ало_Чукало_(Отяжбуе).mw
@@ -64,7 +64,7 @@
 Ашти [[Вежня лей]] лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Чукалы-на-Вежне — 78<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ''. 
 
 == Веленть лемденть  ==
-Лемесь–географиянь термин<ref name="Память, запечатленная в слове"/>). Ули лия версия, лемесь-антропоним, кезерень эрзянь ''Чукай'' лементь эйстэ.
+Лемесь–географиянь термин<ref name="Память, запечатленная в слове"/>. Ули лия версия, лемесь-антропоним, кезерень эрзянь ''Чукай'' лементь эйстэ.
 
 == Веленть эрямозо  ==
 == Содавикс ломанть те велестэнть== 
