--- a/Антоновка_(Тумобуе).mw
+++ b/Антоновка_(Тумобуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
+  |эрицятне               = 106<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 
   |плотность              = 
   |агломерация            = 
@@ -59,9 +59,23 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Антоновка''' - эрзянь веле [[Мордовия]]со [[Тумобуе]]сэ.
+'''Антоновка''' - эрзянь<ref name="РГО">[http://geo13.ru/reestr/object/455 РГО Республики Мордовия: д. Антоновка]{{ref-ru}}</ref> посёлка [[Мордовия]]со [[Тумобуе]]сэ.
 
+Ашти [[Излань лей]] лангсо, [[Улянка лей|Улянка леенть]] сянглеенть. 
+Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие|1931]]) ''Антоновка – посёока 18 кудот марто''.}}
+{{oq|ru|В «СНП Средне-Волжского края» (1931) – Антоновка, поселок из 18 дворов.}}
+{{Цитатань пе}}
 
-[[Category:Мордовиянь велеть|П]]
-[[Category:Тумобуень велеть|П]]
+Эрицятнеде: [[2002 ие]]стэ ульнесь 10 лом., 2010 иень ловномасонть - 4 ломанть.  
+== Веленть лемденть  ==
+Лемесь–антропоним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>, юрось саеви васенце эрямо тарканть путыцянть лемстэ (Антон Фролович Суродеев).
+
+== Веленть эрямозо  ==
+== Содавикс ломанть те велестэнть== 
+
+== Сёрм.: ==
+<references />
+[[Category:Мордовиянь велеть|А]]
+[[Category:Тумобуень велеть|А]]
 [[Category:Эрзянь велеть]]
