/* Содавикс ломанть те велестэнть */

--- a/Аоре_(Лугаян_буе).mw
+++ b/Аоре_(Лугаян_буе).mw
@@ -65,7 +65,7 @@
 Смустезэ саеви ''аоре'' валстонть, веленть рузокс лемесь саеви ''Шандро'' лемстэнть, сон ульнесь веленть путыцязо.
 
 == Содавикс ломанть те велестэнть ==
-Чирьгуж велесэ чачсть:
+Аоресэ чачсть:
 * С.С. Немцев — ульнесь вейсхозонь прявт (Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 
 [[Умарьковонь 16 чи]]стэ [[2014 ие]]стэ Аоре велесэнть ульнесь кавто покшчить –  Аоре веленть Чи, ды 100 иень чачома чистэ<ref> [http://kultura-lukoyanov.ru/2014/08/19/день-села-шандрово-лукояновского-рай/ День села Шандрово Лукояновского района и 100-летие со дня рождения Героя Социалистического труда Семёна Семёновича Немцева{{ref-ru}}]</ref> Немцевень Семён Семёновичень топодеманть.
