--- a/Атемарь_(Лямбирьбуе).mw
+++ b/Атемарь_(Лямбирьбуе).mw
@@ -62,7 +62,7 @@
 {{Лия смустьтне|Атямарь (смустьтне)}}
 '''Атямарь''' (лиякс мерить: '''Атемарь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/o_Atemar.htm Многоликая Мордовия: Село Атемар] {{Ref-ru}}</ref>''', {{Lang-ru|Атемар}}) - эрзянь веле [[Лямбирьбуе]]сэ, [[Мордовия]]со.
 
-Ашти 10 [[вайгельпе|вп]] чилисемаёнксов [[Саран ош]]сто [[Атямарка лей]]ненть чиресэ. Лецтяви ({{Lang-ru|Списке населенных пунктов Пензенской губернии}}) ([[1869 ие]]) ''Атемар — 504<ref name="Многоликая"/> кудот марто Саранонь уездсэ''.
+Ашти 10 [[вайгельпе|вп]] чилисемаёнксов [[Саран ош]]сто [[Атямарька лей|Атямарка лей]]ненть чиресэ. Лецтяви ({{Lang-ru|Списке населенных пунктов Пензенской губернии}}) ([[1869 ие]]) ''Атемар — 504<ref name="Многоликая"/> кудот марто Саранонь уездсэ''.
 
 ==Веленть лемденть==
 Лемесь-гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. Ули лиякс вановкс лементь ланкс: ''атя'' эли ''атямарь'' валтнестэ<ref name="Многоликая"/>.
