--- a/Степан_Эрьзя.mw
+++ b/Степан_Эрьзя.mw
@@ -7,7 +7,7 @@
  |артовксонть эйсте    = Аргентинань артыцянь литографиясь <!-- Должно характеризовать портрет -->
  |важодема ёрокчизе    = чувтосто керсиця, Россиянь ды Раськеютконь артыця
  |чачома чись          = 27.10.1876
- |чачома тарка         = {{ЧачомаТарка|}}
+ |чачома тарка         = {{ЧачомаТарка|Баеньбуе (Орданьбуе)}}
  |гражданчи            = {{Масторкоцт|СССР}}
  |кедьалксчи           = {{Масторкоцт|Россиянь Империя}}
  |кулома чись          = 24.11.1959
@@ -22,12 +22,12 @@
  |вальма               = 
  |википурнавкс         = 
 }}
-'''Степан Эрьзя''' (Нефёдовонь Митреень Стёпук, [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] Баева велесе - [[Сундерьковонь 24 чи|суньдерьковонь 24-це чистэ]] [[1959 ие]] Москов) — [[Эрзя|Эрзянь]] Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця. 
+'''Степан Эрьзя''' (Нефёдовонь Митреень Стёпук, [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] Баеньбуесэ - [[Сундерьковонь 24 чи|суньдерьковонь 24-це чистэ]] [[1959 ие]] Москов) — [[Эрзя|Эрзянь]] Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця. 
  
 Эрзя раськень лементь путызеть эсинзе лемес вана мезень коряс — арсесь невтемензэ веси Мастороньте вишка раськеденть, конань улить Инеломанть.
 
 == Эрямопингезэ ==
-Чачсь [[Баева веле|Баева велесе]] [[Ратор буэ|Ратор буесэ]] Симбирской ёнксо [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] (кона ней ашти [[Орданьбуе|Орданьбуень]] [[Мордовия Республикась|Мордовия Республикасо]]) сокиця-видиця семиясо. Васенце артома тонавтнемат сайсь [[Ратор ош|Ратор]] ды [[Казань ош|Казанень]] оштнень пазавань теемакудотнесе.
+Чачсь [[Баеньбуе (Орданьбуе)|Баеньбуесэ]] [[Ратор буэ|Ратор буесэ]] Симбирской ёнксо [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] (кона ней ашти [[Орданьбуе|Орданьбуень]] [[Мордовия Республикась|Мордовия Республикасо]]) сокиця-видиця семиясо. Васенце артома тонавтнемат сайсь [[Ратор ош|Ратор]] ды [[Казань ош|Казанень]] оштнень пазавань теемакудотнесе.
 
 [[1902 ие]]стэ саезь 1906 иес тонавтнесь МУЖВЗ-со (Московонь живописень, ваяниянь ды зодчествань училищасо) Волнухинень С. М. ды Трубецкоень П. П. содавикс тонавтыцятнень кедьсе.
 
@@ -90,6 +90,19 @@
 * Московоньава (Москвичка) (1953) 
 * Вечкема (Любовь) (1955) 
 * «Студент-тонавтниця тейтерьканть чамаартовкс» («Портрет студентки») (1954)
+
+=== С. Эрьзянь 140-иеть чачома чистэнзэ ===
+*  «Начало вечности» проект (анонкстыцязо С.Д. Эрьзянь лемсэ Весемасторонь искусствань фондось<ref name="Проект «Начало вечности»">{{Cite web|url=http://erzia-fond.com/proekty/proekt-nachalo-vechnosti-k-140-letiyu-so-dnya-rozhdeniya-sd-erzi|title=Проект «Начало вечности» к 140-летию со дня рождения С.Д. Эрьзи|publisher=erzia-fond.com|accessdate=2016-06-22}}</ref>, карми ютамо 2015 иень даволковонь 3 чистэ  - 2016 иень сундерьковонь 24 чис)
+* карми анокстамо кинопоэма «ЭРЬЗЯ»<ref>[http://erzia-museum.ru/ru/novosti/k-140-letiyu-stepana-erzi-snimaetsya-film/ МРМИИ им. С.Д. Эрьзи. К 140-лети Степаны Эрьзи снимается новый фильм]{{ref-ru}}</ref>(теицяст  «Искусство продвижения кино» продюсерэнь куншкатарка (Москов ош), Сергей Головецкий режиссёрось-теицясь, Ирина Уральская операторось-теицясь).
+[[Артовкс:2016 06 14 Russian museum Stepan Erzia.jpg|thumb|350px|Рузонь Музейсэ «Степан Эрьзя. 1876 – 1959» невтевксэнть панжить Василевская Елена Викторовна (Рузонь Музеенть XX - XXI пп. скульптурань секторонть ветицясь) ды Норбекова Людмила Николаевна (С. Эрьзянь лемсэ Мордовиянь республикань изобразительной искусствань музеенть прявт), [[2016 ие]]нь [[аштемковонь 15 чи]]]]
+* 2016 иень панжиковонь 13 чи - панжовсь '''«Сергей Конёнков и Степан Эрьзя: великие соратники, великие соперники»''' невтемась Мемориальной музейсэ [http://www.rah.ru/museums/muzey_masterskaya_s_t_konenkova.php Творческая мастерская С.Т.Конёнкова]", анокстыцясь С.Д. Эрьзянь лемсэ Весемасторонь искусствань фондось<ref>{{Cite web|url=http://www.rah.ru/news/detail.php?ID=31337|title=Выставка «Сергей Конёнков и Степан Эрьзя: великие соратники, великие соперники»  в музее Коненкова|publisher=www.rah.ru|accessdate=2016-06-22}}</ref> (таркась ды шкась: Мемориальной музей "Творческая мастерская [[Конёнков, Сергей Тимофеевич|С.Т.Конёнковонь]]", панжиковонь 13 чи - Таштамковонь 13 чи  2016 ие). 
+[[Артовкс:2016 06 14 Russian Museum Stepan Erzia LN Tolstoj.jpg|thumb|350px|Степан Эрьзянь тевксэсь Рузонь Музейсэ «Степан Эрьзя. 1876 – 1959» невтевксэнть «Л. Н. Толстой», 1930 ие, Альгарробо]]
+* 2016 иень чадыковонь 15 чи  - панжовсь '''«Степан Эрьзянь Ие Эстониясо»''' ( {{Lang-ru|'''«Год Степана Эрьзи в Эстонии»'''<ref>[http://linnamuuseum.ee/vemu/новости/?lang=ru Vene Muuseum - Tallinna Linnamuuseum // Степан Эрьзя 140: юбилейная выставка]{{ref-ru}}</ref>}} проектэсь (анокстыцясь «Сятко»<ref name="BaltNews.ee">[http://baltnews.ee/kultur/20160417/1014691971.html BaltNews.ee В Таллинском Русском музее открылась выставка «Степан Эрьзя 140»]{{ref-ru}}</ref> эрзянь шкинемань пурнавксось Эстонияссо Таллиннэнь ошонь Музеенть марто, таркась ды шкась: Таллиннэнь Рузонь Музеесь<ref>[http://www.slavia.ee/index.php?option=com_content&view=article&id=13704:mordovskij-volshebnik-voskhishchayushchij-ves-mir-foto&catid=107:2009-07-07-12-28-16&Itemid=637 Славия: Мордовский волшебник, восхищающий весь мир  ]{{ref-ru}}</ref>, 2016 иень Чадыковонь 15 чи - Панжиковонь 15 чи<ref name="BaltNews.ee" />)
+* 2016 иень аштемковонь 15 чи - панжовсь '''«Степан Эрьзя. 1876-1959»'''<ref>[http://www.rusmuseum.ru/mikhailovsky-castle/exhibitions/stepan-erzya-1876-1959/ Русский музей // Выстава Степан Эрьзя]{{ref-ru}}</ref> невтевксэсь [[Рузонь Музей|Рузонь музейсэ]] ([[Ине-Петрань ош]]) (таркась ды шкась: Михайловской замок, 2016 иень [[Панжиковонь 15 чи]]стэ — [[Умарьковонь 8 чи]]с).
+
+== Сёрм.: ==
+<references />
+
 
 == Налткеть ==
 * [http://web.archive.org/20021106005649/erzya.by.ru/ Эрямопингезе, шкинемазо, теевксензэ] {{Ref-ru}}
