--- a/Степан_Эрьзя.mw
+++ b/Степан_Эрьзя.mw
@@ -36,7 +36,7 @@
 [[1920 ие]]стэ саезь 1926 иес эрясь Кавказонь ёнксо ды лия [[СССР|СССР-нь]] лембе ёнкснева. 1926 иесте Степан Эрьзя ардсь Франциянь Масторов (Париж ошов) эсинзе невтевкс марто, сесте сонзе ушодовсь кувака омбомасторонь эрямо ды шкинема шказо. 
 
 [[1927 ие]]стэ саезь 1950 иес Инекерсицясь важоди ды эри [[Аргентинань Мастор|Аргентинань Масторсо]] ([[Буэнос-Айрес ош|Буэнос-Айресес ошов]]). 
-[[Артовкс:Erzia and Moisey.jpg|thumb|right|200px| Степан Эрьзя эсинзэ ''Моисей'' теевксензэ вакссо, Аргентинань Масторсо]]
+
 [[1950 ие]]стэ Степан Эрьзянень максть велявтомо совамо одов Советень Масторов, ды 1951 иестэ сон сась [[Москов ош|Москов ошов]], ансяк тиринь, [[Эрзянь Мастор|Эрзянь Масторов]] сонзэ эзизь нолда. Мартонзо усксь пек ламо эсинзэ теевкст. 
 
 [[1957 ие]]стэ Эрьзя ульнесь Казезь Важодемань Якстере Раське коцтонь орденсэ-тешксэ.
@@ -96,10 +96,18 @@
 * карми анокстамо кинопоэма «ЭРЬЗЯ»<ref>[http://erzia-museum.ru/ru/novosti/k-140-letiyu-stepana-erzi-snimaetsya-film/ МРМИИ им. С.Д. Эрьзи. К 140-лети Степаны Эрьзи снимается новый фильм]{{ref-ru}}</ref>(теицяст  «Искусство продвижения кино» продюсерэнь куншкатарка (Москов ош), Сергей Головецкий режиссёрось-теицясь, Ирина Уральская операторось-теицясь).
 [[Артовкс:2016 06 14 Russian museum Stepan Erzia.jpg|thumb|350px|Рузонь Музейсэ «Степан Эрьзя. 1876 – 1959» невтевксэнть панжить Василевская Елена Викторовна (Рузонь Музеенть XX - XXI пп. скульптурань секторонть ветицясь) ды Норбекова Людмила Николаевна (С. Эрьзянь лемсэ Мордовиянь республикань изобразительной искусствань музеенть прявт), [[2016 ие]]нь [[аштемковонь 15 чи]]]]
 * 2016 иень панжиковонь 13 чи - панжовсь '''«Сергей Конёнков и Степан Эрьзя: великие соратники, великие соперники»''' невтемась Мемориальной музейсэ [http://www.rah.ru/museums/muzey_masterskaya_s_t_konenkova.php Творческая мастерская С.Т.Конёнкова]", анокстыцясь С.Д. Эрьзянь лемсэ Весемасторонь искусствань фондось<ref>{{Cite web|url=http://www.rah.ru/news/detail.php?ID=31337|title=Выставка «Сергей Конёнков и Степан Эрьзя: великие соратники, великие соперники»  в музее Коненкова|publisher=www.rah.ru|accessdate=2016-06-22}}</ref> (таркась ды шкась: Мемориальной музей "Творческая мастерская [[Конёнков, Сергей Тимофеевич|С.Т.Конёнковонь]]", панжиковонь 13 чи - Таштамковонь 13 чи  2016 ие). 
-[[Артовкс:2016 06 14 Russian Museum Stepan Erzia LN Tolstoj.jpg|thumb|350px|Степан Эрьзянь тевксэсь Рузонь Музейсэ «Степан Эрьзя. 1876 – 1959» невтевксэнть «Л. Н. Толстой», 1930 ие, Альгарробо]]
+[[]]
 * 2016 иень чадыковонь 15 чи  - панжовсь '''«Степан Эрьзянь Ие Эстониясо»''' ( {{Lang-ru|'''«Год Степана Эрьзи в Эстонии»'''<ref>[http://linnamuuseum.ee/vemu/новости/?lang=ru Vene Muuseum - Tallinna Linnamuuseum // Степан Эрьзя 140: юбилейная выставка]{{ref-ru}}</ref>}} проектэсь (анокстыцясь «Сятко»<ref name="BaltNews.ee">[http://baltnews.ee/kultur/20160417/1014691971.html BaltNews.ee В Таллинском Русском музее открылась выставка «Степан Эрьзя 140»]{{ref-ru}}</ref> эрзянь шкинемань пурнавксось Эстонияссо Таллиннэнь ошонь Музеенть марто, таркась ды шкась: Таллиннэнь Рузонь Музеесь<ref>[http://www.slavia.ee/index.php?option=com_content&view=article&id=13704:mordovskij-volshebnik-voskhishchayushchij-ves-mir-foto&catid=107:2009-07-07-12-28-16&Itemid=637 Славия: Мордовский волшебник, восхищающий весь мир  ]{{ref-ru}}</ref>, 2016 иень Чадыковонь 15 чи - Панжиковонь 15 чи<ref name="BaltNews.ee" />)
 * 2016 иень аштемковонь 15 чи - панжовсь '''«Степан Эрьзя. 1876-1959»'''<ref>[http://www.rusmuseum.ru/mikhailovsky-castle/exhibitions/stepan-erzya-1876-1959/ Русский музей // Выстава Степан Эрьзя]{{ref-ru}}</ref> невтевксэсь [[Рузонь Музей|Рузонь музейсэ]] ([[Ине-Петрань ош]]) (таркась ды шкась: Михайловской замок, 2016 иень [[Панжиковонь 15 чи]]стэ — [[Умарьковонь 8 чи]]с).
 
+
+<gallery>
+Артовкс:2016 06 14 Russian Museum Stepan Erzia LN Tolstoj.jpg|thumb|350px|Степан Эрьзянь тевксэсь Рузонь Музейсэ «Степан Эрьзя. 1876 – 1959» невтевксэнть «Л. Н. Толстой», [[1930 ие]], Альгарробо
+Артовкс:4 Museo Casa Quiroga Mausoleo - Escultura tallada en raíz de algarrobo por Stephan Erzia.JPG|thumb|350px|Степан Эрьзянь тевксэсь Куарина Музейсэ ({{Lang-es|Museo Casa Quiroga Mausoleo}}), Альгарробо
+Артовкс:Erzia and Moisey.jpg|thumb|right|200px|Степан Эрьзя эсинзэ ''Моисей'' теевксензэ вакссо, Аргентинань Масторсо
+Erzya Leda.jpg|thumb|right|350px|Степан Эрьзянь ''Леда'' тевксэсь 
+2016 06 14 Russian Museum Stepan Erzia exhibition preview.jpg|thumb|right|350px|Рузонь Музей (И-Петрань ош), «Степан Эрьзя. 1876 – 1959» невтевксэсь. Куншка таркасо «Медуза», [[1938 ие]], Чувто.
+</gallery>
 == Сёрм.: ==
 <references />
 
