*Empty MediaWiki Message*

--- a/«Торама»_морамо-седямо_кужо.mw
+++ b/«Торама»_морамо-седямо_кужо.mw
@@ -21,10 +21,9 @@
  |Сайт               = [http://torama.club/ Torama.club] <!-- {{URL|example.com}} -->
 }}
 <!-- [[Image:Torama2.jpg|thumb|right|200px|«Торама» 1992 иестэ]] -->
-[[Image:Torama90.jpg|thumb|right|350px|«Торама» седямо-морамо кужось [[Раськень Озкс|Эрзянь Раськень Озксо]] 2004 иестэ]]
-'''«Торама»''' — цёрань сёдямо-морамо кужо.   
+'''«Торама»''' ({{lang-myv|Йо́влат}}<ref name="Эрзянь Мастор">[http://www.erzia.saransk.ru/arhiv.php?n=3713&nom11=360 «Эрзянь Мастор» // Звезда упала — свет её остался. Жизненный и творческий путь Йовлань Оло]{{ref-ru}}, {{ref-myv}}</ref><ref name="Kultuur.ee">[http://kultuur.err.ee/v/muusika/e3e30e33-e6ae-4652-a734-d2f23d26fd45 Kultuur.ee // Etnolaager Kõpu mõisas tõi kokku üle 70 muusiku]{{ref-et}}</ref>, латиницасо сёрмадыть '''Toorama<ref name="Folkcenter">[http://folkcenter.ru/группа/Торама Folkcenter // Торама]{{ref-ru}}</ref>''') — цёрань сёдямо-морамо кужо.   
 
-Мордовиянь Республиканть Масторпрявт Казямо  1995 иень лауреат. Пурназь 1990 иесте [[Саран ош|Сарансо]]. «Торама»-нь пурныцязо [[Йовлань Оло|Йовлань Оло (В. И. Ромашкин)]]. 
+Мордовиянь Республиканть Масторпрявт Казямо [[1995 ие]]нь лауреат<ref name="Министерство культуры и туризма РМ"/>. Пурназь [[1990 ие]]сте<ref name="Бояркина Л.">Бояркина Л.Б. Мордовская музыкальная энциклопедия / под общ.ред.Н.И.Бояркина. – Саранск: Мордов.кн.изд-во, 2011. - С.331.{{ref-ru}}</ref> [[Саран ош|Сарансо]]. «Торама»-нь пурныцязо [[Йовлань Оло|Йовлань Оло (В. И. Ромашкин)]]<ref name="Эрзянь Мастор"/>. 
 == «Торама»-с совицянзо ==
 Седямо-морамо кужоньте совасть кода тевень содыцят, истяжо сынст тонавтнезь седямоломанть (ушодомастонзо неень шкас):
 
@@ -48,12 +47,10 @@
 == «Торама» моры ды седи ==
 «Торама» эсинзе моротнесе кепедсти ды сравты эрзянь, мокшонь раськенть кезерень мазычинзе, цёратне морыть эрзянь, мокшонь, шокшонь ды каратаень вайгелень ды кедьёнксонь морот-теевкст; ковоньвальксонь марто сюлмазь морот ды седямопельсэ налксемат; эрьва кодат седямонь жанрань ды лувонь невтевкст; илань-кирдань, аволь илань-кирдань ды эйкакшонь фольклоронь теевкст.
 
-Седить эрзянь ды мокшонь раськень седямопельсэ (''кальхциямат'' м., ''кальцяемат'' э.; ''шавома'' м., ''чавома'' э.; ''гарзи'' м.. ''кайга'' э.; ''вяшкома'' м., ''вешкема'' э.; ''сёвонень вяшкома'' м., ''кевень тутушка'' э.; ''нюди'' м., э.), конатнестэ седе ламотнень теить сынсь.
+Седить эрзянь ды мокшонь раськень седямопельсэ (''кальхциямат'' м., ''кальцяемат'' э.; ''шавома'' м., ''чавома'' э.; ''гарзи'' м.. ''кайга'' э.; ''вяшкома'' м., ''вешкема'' э.; ''сёвонень вяшкома'' м., ''кевень тутушка'' э.; ''нюди'' м., э.)<ref name="SmartNews">[http://smartnews.ru/regions/saransk/14522.html  SmartNews//Золотая дудка. Музыканты восстанавливают песенные традиции Мордовии]{{ref-ru}}</ref>, конатнестэ седе ламотнень теить сынсь.
 
 == «Торама»-сь Россиянь ды Омбомастортнева ==
-
-[[Image:Torama1.jpg|thumb|right|200px|«Торама» 1992 иестэ [[Эстэнь Мастор|Эстэнь Масторсо]]]]
-«Торама» — моронь мазычинь фольклоронь седямонь пурнавксонь 1992 иесте улицясь [[Суоми Мастор|Суоми Масторсо]] — [[Йоэнсу ош]]со, Ряяккюлясо (1993 иесте);
+«Торама» — моронь мазычинь фольклоронь седямонь пурнавксонь 1992 иесте улицясь [[Суоми Мастор|Суоми Масторсо]]<ref name="Finnougoria.ru">[http://www.finnougoria.ru/community/creative/section.php?ELEMENT_ID=5826 Finnougoria.ru //"Торама", фольклорный ансамбль]{{ref-ru}}</ref> — [[Йоэнсу ош]]со, Ряяккюлясо (1993 иесте);
 «Россиянь вайгельть» раськень моронь топавтыцянь 2-це телерадиоконкурсонь лауреатт ([[Смоленск ош]], 1994 ие). 
 
 1991 ды 1997 ии. ульнесь-мрсесь [[Суоми Мастор|Суоми Масторга]], 1994 иесте Англиясо. 1999 иесте теезель «Торама-jazz» пурнавкс .
@@ -63,31 +60,43 @@
 == Плаштят нолдазь ==
 Эрзянь  седямо историясонть васенцеде Суоми Масторсо сёрмадозь эрзянь морамо кирькс, ды Эстония Масторсо [[Мокшонь кель|мокшонь]] кезэрень морот.
 
-Васенце эрзянь кельсэ альбомось нолдазь 1997 иесте. Сонзе лемезе ''Mordvin Songs - Traditional Erzya - Mordvin Folk Songs From The Republic Of Mordovia''. Сонзэ эйс совась 16 морот:
+===Васенце нолдавксось===
+Сон теезь эрзянь кельсэ, нолдазь [[1997 ие]]сте. Лемезе ''Mordvin Songs - Traditional Erzya - Mordvin Folk Songs From The Republic Of Mordovia''. Сонзэ эйс совавтозь 16 морот:
+# «Масторавась лужакадсь» (моро)
+# «Кува содави тундонь чись» (моро)
+# «Пазчангодть» (моро)
+# «Покш Толкан велесь» (моро)
+# «Гарй кери пенгензе» (моро)
+# «Иванось Устя» (моро)
+# «Тейтересь паро-Виртёва» (моро)
+# «Лиседе, раськеть,каршозонок» (моро)
+# [[«Э, каштомава, авине» (моро)]]
+# «Мурзань цёра» (моро)
+# «Адя, киял, мазы репсэнь саламо» (моро)
+# «Довабабине» (моро)
+# «Савань Терюша» (моро)
+# [[«Кодамо моро минь моратано» (моро)]]
+# «Раужо иневедесь» (моро)
+# «Тюштя» (моро)
 
-* «Масторавась лужакадсь» (моро)
-* «Кува содави тундонь чись» (моро)
-* «Пазчангодть» (моро)
-* «Покш Толкан велесь» (моро)
-* «Гарй кери пенгензе» (моро)
-* «Иванось Устя» (моро)
-* «Тейтересь паро-Виртёва» (моро)
-* «Лиседе, раськеть,каршозонок» (моро)
-* [[«Э, каштомава, авине» (моро)]]
-* «Мурзань цёра» (моро)
-* «Адя, киял, мазы репсэнь саламо» (моро)
-* «Довабабине» (моро)
-* «Савань Терюша» (моро)
-* [[«Кодамо моро минь моратано» (моро)]]
-* «Раужо иневедесь» (моро)
-* «Тюштя» (моро)
+===Омбоце нолдавксось===
+* Mastorava — Me Naiset & Toorama (Масторава — те вейсэнь морамоплаштине, ''Me Naiset''<ref name=" lauluystävyytt">[http://www.me-naiset.net/mordva.htm MeNaiset//Mordvalaista lauluystävyyttä]{{ref-fi}}</ref> [[суомить|суоминь]] авань морамо кужонть марто. Моротне кода [[эрзянь кель|эрзянь]], ды [[суоминь кель|суоминь]] кельтнесэ<ref name="Mastorava">[http://www.me-naiset.net/masto.htm MeNaiset//Mastorava]{{ref-fi}}</ref> 1997- 2001 ии.)
+===Колмоце нолдавксось===
+* Taga Eriaza Shkai! ({{lang-ru|Пусть живет Покровитель!}}) — моротне  [[мокшонь кель]]сэ. Ульнесь сэрмадозь Эстониясо [[2000 ие]]стэ).
 
 == «Торамань» прявтнэ ==
-1990 иестэ саезь «Тораманть» ветясь Йовлань Оло; 2002 иестэ саезь неень шкас — А. В.  Ромашкин.
+1990 иестэ саезь «Тораманть» ветясь Йовлань Оло; 2002 иестэ саезь неень шкас — художественной правтось с А. В.  Ромашкин<ref name="Министерство культуры и туризма РМ">[http://www.mktrm.ru/index.php?id=537 Министерство культуры и туризма РМ: Государственное автономное учреждение «Фольклорный ансамбль «Торама»]{{ref-ru}}</ref>.
+
+==Фототованмот ==
+<gallery>
+Артовкс:Torama REM 30.05.2009.jpg|thumb|350px|«Торамась» моры Россиянь Этнографиянь музейсэ ([[Ине-Петрань ош]]), 2009 иень панжикоовнь 30 чи
+Артовкс:Torama1.jpg|thumb|right|200px|«Торама» [[1992 ие]]стэ [[Эстэнь Мастор|Эстэнь Масторсо]]
+Артовкс:Torama90.jpg|thumb|right|350px|«Торама» седямо-морамо кужось [[Раськень Озкс|Эрзянь Раськень Озксо]] [[2004 ие]]стэ
+</gallery>
+
 
 == Сёрм.: ==
-В. М. Живаев
-
+<references />
 
 [[Category:Культура]]
 [[Category:Койть]]
