--- a/Никольской_буе_(Пенза_ёнкс).mw
+++ b/Никольской_буе_(Пенза_ёнкс).mw
@@ -61,7 +61,7 @@
 * [[Алово (Никольской буе)|Алово]] ({{lang-ru|с. Алово}})
 * [[Кенза (Никольской буе)|Кенза]]<ref>[http://inpenza.ru/nikolsk/bazarnaya_kensha.php БАЗАРНАЯ КЕНЬША (Трехсвятское) Никольского района Пензенской области] {{ref-ru}}</ref> ({{lang-ru|с. Базарная Кеньша}})
 * [[Вечкилей (Никольской буе)|Вечкилей]] ({{lang-ru|с. Вечкилей}})
-* [[Карамалы (Никольской буе)|Карамалы]] ({{lang-ru|с. Карамалы}})
+* [[Карамалы (Никольской буе)|Карамалы]]<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.105  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> ({{lang-ru|с. Карамалы}})
 * [[Лопуховка (Никольской буе)|Лопуховка]] ({{lang-ru|с. Лопуховка}})
 * [[Митрофановка (Никольской буе)|Митрофановка]] ({{lang-ru|с. Митрофановка}})
 * [[Покш Пирнёв (Никольской буе)|Покш Пирнёв]] ({{lang-ru|с. Большое Пермиёво}})
