*Empty MediaWiki Message*

--- a/Мочалище_(смустьтне).mw
+++ b/Мочалище_(смустьтне).mw
@@ -2,7 +2,7 @@
 
 ;Топонимт
 * [[Мочалище (Кировонь ёнкс)|Мочалище]] — веле [[Оричевень буе|Оричевень буе]] [[Кировонь ёнкс]]о.
-* [[Мочалище (Марий Эл|Мочалище]] — посёлка ошонь кондямо Звенигень буесэ [[Марий Эл]]сэ.
+* [[Мочалище (Марий Эл)|Мочалище]] — посёлка ошонь кондямо Звенигень буесэ [[Марий Эл]]сэ.
 * [[Мочалище (Тверень ёнкс)|Мочалище]] — веле [[Селижаронь буе|Селижаронь буесэ]] [[Тверень ёнкс]]о.
 
 ;Гидронимт
