*Empty MediaWiki Message*

--- a/Сурвеле_(Кочкурбуе).mw
+++ b/Сурвеле_(Кочкурбуе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Сурвеле (смустьтне)}}
 <br />
 {{ЭТ
  |статус                  = веле
@@ -59,13 +60,17 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Сурвеле''' ({{Lang-ru|Сабаево}}) - эрзянь веле [[Кочкурбуе]]сэ.
+'''Сурвеле'''<ref name="Память, запечатленная в слове"/> ({{Lang-ru|Сабаево}}) - эрзянь веле [[Кочкурбуе]]сэ.
 
-Ашти [[Сэняш лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской рубернии}}) ([[1863 ие]]) ''Сурвеле —  219 кудот марто Карсунонь уездсэ''. Велесь ульнесь путозь  ХIII - ХIV пингетнестэ кода Сурвеле. 
-
-ХVIII пингень ушодомсто, коли явовтыльть [[Сура лей|леенть]] ды [[Нерлей]]касо модатнень не таркатне максозь ульнесть Сабаевень Аркашнень, сестэ велентень кармасть мереме ''Сабаево''.
+Ашти [[Сэняш лей]] лангсо. Велесь ульнесь путозь  ХIII - ХIV пингетнестэ кода Сурвеле. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1863 ие|1863]]) ''Сурвеле —  219 кудот марто Карсунонь уездсэ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Сабаево, деревня из 219 дворов  Карсунского уезда.}}
+{{Цитатань пе}}
 
 Эрицятнеде 1028 лом. (2010 ие), 1319 лом. (2001 ие).
+
+== Веленть лемденть  ==
+Лемесь–антропоним<ref name="Память, запечатленная в слове"/>, юрось саеви тюрконь (печказонь) '''Саба''' лемсьэнть (''тюрк.'' '''саба''',  ({{Lang-ar|саба}}) - ({{Lang-ru|«легкий, утренний ветер; юность, молодость»}}) + '''-й''' суффиксэсь. Эрзянь лемесь-гидроним: велесь ашти 4 вп [[Сура лей|Сура леенть]] эйстэ.  ХVIII пингень ушодомсто, коли явовтыльть [[Сура лей|леенть]] ды [[Нерлей]]касо модатнень не таркатне максозь ульнесть ''Сабаевень Аркашнень'', сестэ велентень кармасть мереме '''Сабаево'''.
 
 == Содавикс ломанть те велестэнть ==
 Сурвелесэ чачсть:
