*Empty MediaWiki Message*

--- a/Сурвеле_(Кочкурбуе).mw
+++ b/Сурвеле_(Кочкурбуе).mw
@@ -62,7 +62,7 @@
 }}
 '''Сурвеле'''<ref name="Память, запечатленная в слове"/> ({{Lang-ru|Сабаево}}) - эрзянь веле [[Кочкурбуе]]сэ.
 
-Ашти [[Сэняш лей]] лангсо. Велесь ульнесь путозь  ХIII - ХIV пингетнестэ кода Сурвеле. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
+Ашти [[Сеняш лей]] лангсо. Велесь ульнесь путозь  ХIII - ХIV пингетнестэ кода Сурвеле. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1863 ие|1863]]) ''Сурвеле —  219 кудот марто Карсунонь уездсэ''.}}
 {{oq|ru|В «СНМ Симбирской губернии» (1863) – Сабаево, деревня из 219 дворов  Карсунского уезда.}}
 {{Цитатань пе}}
