*Empty MediaWiki Message*

--- a/Мурань_(Кочкурбуе).mw
+++ b/Мурань_(Кочкурбуе).mw
@@ -62,7 +62,7 @@
 
 '''Мурань''' ({{Lang-ru|с. Мурань}}) — те эрзянь<ref>[http://mnogolik-mordovia.mrsu.ru/m_Myran.htm Многоликая Мордовия: Село Мурань]{{Ref-ru}}</ref> веле [[Мордовия]]ань [[Кочкурбуе|Кочкурбуесэ]].
 
-Ашти [[Сэняш лей]] лангсо, [[Кочкур веле (Кочкурбуень)|Кочкур веле]]  —  [[Сурвеле (Кочкурбуень)|Сурвеле]] кинть лагсо. Ансяк 9 [[вайгельпе|вп]] буень куншка таркастонть.
+Ашти [[Сеняш лей]] лангсо, [[Кочкур веле (Кочкурбуень)|Кочкур веле]]  —  [[Сурвеле (Кочкурбуень)|Сурвеле]] кинть лагсо. Ансяк 9 [[вайгельпе|вп]] буень куншка таркастонть.
 
 Кода лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1913 ие]]) Мурань - 30 кудот марто Карсунонь уездсэ. 
 
