*Empty MediaWiki Message*

--- a/Сеняш_лей.mw
+++ b/Сеняш_лей.mw
@@ -23,7 +23,7 @@
    |Буе                   = Кочкурбуе
 }}
 
-'''Сеняш''' ({{lang-ru|Синяш<ref name="Память, запечатленная в слове"/>}}) — кершёнонь [[Сура лей|Сура леенть]] сянглей, коната чуди [[Мордовия]]нь [[Кочкурбуе]]ва.
+'''Сеняш<ref name="Память, запечатленная в слове"/>''' ({{lang-ru|Синяш}}) — кершёнонь [[Сура лей|Сура леенть]] сянглей, коната чуди [[Мордовия]]нь [[Кочкурбуе]]ва.
 Леенть кувалмозо 35 [[Вайгельпе|вп]], покшолмазо весемезэ 196 тёж. вп². Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177600|title=Государственный водный реестр РФ: Синяш|archiveurl=http://www.webcitation.org/6A75FK7lL|archivedate=2012-08-22}}</ref> леенть пурнавкссо. 
 
 Лейбрянь тарказо ашти чилисема ёнов [[Кочкур веле (Кочкурбуе)|Кочкур веле]]стэнть. Чуди [[чилисема]] ёнов, юты<ref name="Память, запечатленная в слове"/> [[Сурвеле (Кочкурбуе)|Сурвеле]], [[Красная Зорька (Кочкурбуе)|Красная Зорька]]. Прамонть тарказо  ашти 464 вп Сура лейга.
