*Empty MediaWiki Message*

--- a/Сухая_Атьма_лей.mw
+++ b/Сухая_Атьма_лей.mw
@@ -28,7 +28,7 @@
 
 Лейбрянь тарказо ашти Ташто Шайгабуень вирьсэ, 12 вп [[Мельцаны (Ташто Шайгабуе)|Мельцаны веленть]] вакссо, Алоошонь ёнксонь межа модасторнть. Сеске лейбрянь таркасто ушоды чудеме Лямбирьбуева. Чуди [[Пелеве ёнкс|пелеве]]-[[Чилисема|чилисема]]ёнов, юты<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> [[Языково (Лямбирьбуе)|Языково]], [[Дальний (Лямбирьбуе)|Дальний посёлканть]] ды [[Николаевка (Лямбирьбуе)|Николаевка веленть]]. Лейсэнть улить знярояк сёлтт. Пры Большая Атьма лей Николаевка алопесэ.
 == Леенть лемденть  ==
-Лемесь–перенос, саеви Большая Атьма леенть<ref name="Память, запечатленная в слове"/> эйстэ.
+Лемесь–перенос, саеви [[Большая Атьма лей|[Большая Атьма леенть]]<ref name="Память, запечатленная в слове"/> эйстэ.
 
 
 == Сёрм.: ==
