*Empty MediaWiki Message*

--- a/Мурань_(Кочкурбуе).mw
+++ b/Мурань_(Кочкурбуе).mw
@@ -59,12 +59,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-
-'''Мурань''' ({{Lang-ru|с. Мурань}}) — те эрзянь<ref>[http://mnogolik-mordovia.mrsu.ru/m_Myran.htm Многоликая Мордовия: Село Мурань]{{Ref-ru}}</ref> веле [[Мордовия]]ань [[Кочкурбуе|Кочкурбуесэ]].
+{{Лия смустьтне|Мурань (смустьтне)}}
+'''Мурань''' ({{Lang-ru|с. Мурань}}) — те эрзянь<ref>[http://mnogolik-mordovia.mrsu.ru/m_Myran.htm Многоликая Мордовия: Село Мурань]{{Ref-ru}}</ref><ref name="Геопортал РГО">[http://geo13.ru/reestr/object/888 Геопортал РГО Республика Мордовия: Село Мурань]{{Ref-ru}}</ref> веле [[Мордовия]]ань [[Кочкурбуе|Кочкурбуесэ]].
 
 Ашти [[Сеняш лей]] лангсо, [[Кочкур веле (Кочкурбуень)|Кочкур веле]]  —  [[Сурвеле (Кочкурбуень)|Сурвеле]] кинть лагсо. Ансяк 9 [[вайгельпе|вп]] буень куншка таркастонть.
 
-Кода лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1913 ие]]) Мурань - 30 кудот марто Карсунонь уездсэ. 
+Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1913 ие|1913]]) ''Мурань - 30 кудот марто Карсунонь уездсэ. ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1913) – Мурань, хутор из 30 дворов  Карсунского уезда.}}
+{{Цитатань пе}}
 
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить: ''Варма овраг''<ref>[http://www.cigankin.ru/archives/172 Лексико-семантическая характеристика отдельных пластов топонимической системы Мордовской АССР ]{{Ref-ru}}</ref>, ''Долгой Латко<ref>[http://www.cigankin.ru/archives/779 В мире названий мелких географических объектов]{{Ref-ru}}, {{Ref-myv}}</ref>'' – ({{Lang-ru|длинный овраг}}). Вастневить ушонь лемть<ref>[http://www.cigankin.ru/archives/781 Семантика индивидуальных и семейных (родовых) прозвищ жителей  эрзянских и мокшанских населенных пунктов]{{Ref-ru}}, {{Ref-myv}}</ref>:
 * Тужув Охрай — ({{Lang-ru|тужиться, прозвище из-за лености в работе}})
@@ -78,7 +81,7 @@
 Эрицятнеде 185 лом. (2010 ие), 188 лом. (2002 ие), 317<ref>Города и села Мордовии. Историко-социологический справочник. Саранск.1977 {{Ref-ru}}</ref> лом. (1977 ие).
 
 == Веленть лемденть  ==
-Лемесь-гидроним:  бурятонь ''Мурэн<ref>[http://www.cigankin.ru/archives/172 Лексико-семантическая характеристика отдельных пластов топонимической системы Мордовской АССР] {{Ref-ru}}</ref>'' валонть эйстэ, конань смустезэ ''покш ведь''  ({{Lang-ru|«полноводная река»}}). 
+Лемесь-гидроним<ref name="Память, запечатленная в слове"/>:  бурятонь ''Мурэн<ref>[http://www.cigankin.ru/archives/172 Лексико-семантическая характеристика отдельных пластов топонимической системы Мордовской АССР] {{Ref-ru}}</ref>'' валонть эйстэ, конань смустезэ ''покш ведь''  ({{Lang-ru|«полноводная река»}}). Лиякс ули арсема — веленть лемесь-тарканть характеристиказо<ref name="Геопортал РГО"/>. 
 
 == Содавикс ломанть те велестэнть ==
 Мурань велесэ чачсть:
