*Empty MediaWiki Message*

--- a/Мурань_(Кочкурбуе).mw
+++ b/Мурань_(Кочкурбуе).mw
@@ -65,7 +65,7 @@
 Ашти [[Сеняш лей]] лангсо, [[Кочкур веле (Кочкурбуень)|Кочкур веле]]  —  [[Сурвеле (Кочкурбуень)|Сурвеле]] кинть лагсо. Ансяк 9 [[вайгельпе|вп]] буень куншка таркастонть.
 
 Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>:
-{{Цитатань ушодома}} ({{Lang-myv|([[1913 ие|1913]]) ''Мурань - 30 кудот марто Карсунонь уездсэ. ''.}}
+{{Цитатань ушодома}} ({{Lang-myv|([[1913 ие|1913]]) ''Мурань - 30 кудот марто Карсунонь уездсэ''.}}
 {{oq|ru|В «СНМ Симбирской губернии» (1913) – Мурань, хутор из 30 дворов  Карсунского уезда.}}
 {{Цитатань пе}}
 
