*Empty MediaWiki Message*

--- a/Мурань_(смустьтне).mw
+++ b/Мурань_(смустьтне).mw
@@ -1,9 +1,9 @@
 '''Мурань''':
 ;Топоним
 * [[Мурань (Кочкурбуе)|Мурань]] — эрзянь веле [[Кочкурбуе]]сэ [[Мордовия]]со.
-;Гидроним
+;Гидронимт
 * [[Мурань лей|Мурань]] — лей [[Мордовия]]со, [[Сеняш лей|Сеняш леенть]] сянглей.
-
+* [[Мурань (Словениясо)|Мурань]] — лей [[Словения Мастор|Словения]]со (Muráň). 
 
 __DISAMBIG__
 
